various types, edits, minor changes

--- a/01_agama/dirgha/DA_11.md
+++ b/01_agama/dirgha/DA_11.md
@@ -79,7 +79,7 @@ The monks then accepted the teaching and listened.
 19\. “There are also five things to be achieved, five things to be cultivated, five things to be recognized, five things to be ceased, and five things to be realized.
 {:#p19}
 
-20\. “What are five things to be achieved? The five factors of complete cessation: First is faith in the Buddha, Tathāgata, and Arhat who perfected the ten epithets. Second is having no illness and being at peace. Third is being honest and having no deception about heading straight down the Tathāgata’s road to Nirvāṇa. Fourth is mental focus that’s not confused and doesn’t forget the recitations. Fifth is skill in investigating the arising and cessation of things and ending the root of suffering with the noble practice.
+20\. “What are five things to be achieved? The five factors of complete cessation: First is faith in the Buddha, Tathāgata, and Arhat who perfected the ten epithets. Second is having no illness and being at peace. Third is being honest and having no deception about heading straight down the Tathāgata’s road to <em>nirvāṇa</em>. Fourth is mental focus that’s not confused and doesn’t forget the recitations. Fifth is skill in investigating the arising and cessation of things and ending the root of suffering with the noble practice.
 {:#p20}
 
 21\. “What are five things to be cultivated? The five faculties: faculty of faith, faculty of effort, faculty of mindfulness, faculty of samādhi, and faculty of wisdom.
