--- a/01_agama/dirgha/DA_14.md
+++ b/01_agama/dirgha/DA_14.md
@@ -66,7 +66,7 @@ I’m like an elephant led by a hook.
 
 * {:.verse}It’s like a cool wind when it’s hot,\\
 Like finding a cool spring when thirsty,\\
-Like someone choosing Nirvāṇa,\\
+Like someone choosing <em>nirvāṇa</em>,\\
 Or like water dousing a fire.
 
 * {:.verse}It’s like someone sick finding a doctor\\
@@ -99,10 +99,10 @@ It’s impossible to exist without you.
 You’ve an honorable character;\\
 You’ll consider it well.”
 
-10\. The Bhagavān then roused from his samādhi and told Pañcaśikha, “Good, Pañcaśikha, good! You’re able to praise the Tathāgata with your clear voice and harmonious cymophane lute. The sound of both your lute and voice are neither long or short. Their compassion and gracefulness moves people’s hearts. Your song is replete with many meanings and explains the bonds of desire, the religious life, the ascetic, and Nirvāṇa!”
+10\. The Bhagavān then roused from his samādhi and told Pañcaśikha, “Good, Pañcaśikha, good! You’re able to praise the Tathāgata with your clear voice and harmonious cymophane lute. The sound of both your lute and voice are neither long or short. Their compassion and gracefulness moves people’s hearts. Your song is replete with many meanings and explains the bonds of desire, the religious life, the ascetic, and <em>nirvāṇa</em>!”
 {:#p10}
 
-11\. Pañcaśikha then said to the Buddha, “I remember when the Bhagavān became a Buddha sitting beneath the Ajapāla Nigrodha tree on the bank of the Nairañjanā River in Uruvilvā. The great god general’s son Sikhaddi and the gandharva king’s daughter had a rendezvous just to enjoy themselves. I saw the way they were feeling at the time and composed this song. The lyrics explain the bonds of desire, and they explain the religious life, the ascetic, and Nirvāṇa.
+11\. Pañcaśikha then said to the Buddha, “I remember when the Bhagavān became a Buddha sitting beneath the Ajapāla Nigrodha tree on the bank of the Nairañjanā River in Uruvilvā. The great god general’s son Sikhaddi and the gandharva king’s daughter had a rendezvous just to enjoy themselves. I saw the way they were feeling at the time and composed this song. The lyrics explain the bonds of desire, and they explain the religious life, the ascetic, and <em>nirvāṇa</em>.
 {:#p11}
 
 12\. “After she heard my song, the goddess raised her eyes, smiled, and said to me, ‘Pañcaśikha, I’ve never seen a Tathāgata, but I heard the other gods in the Trāyastriṃśa Dharma Meeting Hall praising the virtues and abilities possessed by the Tathāgata. You’ve always been faithful and close to the Tathāgata. I think I’d like to be friends with you.’ Bhagavān, after speaking with her that one time, I never spoke with her again.”
