--- a/01_agama/dirgha/DA_21.md
+++ b/01_agama/dirgha/DA_21.md
@@ -447,30 +447,30 @@ next: DA_22.html
 137\. “As a result of saying about future eons that these sentient beings will be annihilated without remainder, ascetics and priests enter seven views and don’t go beyond them. There’s only the Buddha who can know this … likewise as before.
 {:#p137}
 
-#### Nirvāṇa in the Present Life
+#### <em>Nirvāṇa</em> in the Present Life
 
-138\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great…? Some ascetics and priests create theories about future eons and Nirvāṇa in the present life, saying that sentient beings will have Nirvāṇa in the present. They all enter five views about future eons by doing so. Creating theories about future eons and Nirvāṇa in the present life, they don’t go beyond these five views.
+138\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great…? Some ascetics and priests create theories about future eons and <em>nirvāṇa</em> in the present life, saying that sentient beings will have <em>nirvāṇa</em> in the present. They all enter five views about future eons by doing so. Creating theories about future eons and <em>nirvāṇa</em> in the present life, they don’t go beyond these five views.
 {:#p138}
 
-139\. “What are the reasons that ascetics and priests claim about future eons that sentient beings will have Nirvāṇa in the present life, entering five views that they don’t go beyond?
+139\. “What are the reasons that ascetics and priests claim about future eons that sentient beings will have <em>nirvāṇa</em> in the present life, entering five views that they don’t go beyond?
 {:#p139}
 
-140\. “Some ascetics and priests form this view and this theory: ‘Here in the present life, I partake of the five desires and indulge myself. This is the Nirvāṇa that I’ve attained in the present.’ This is the first view.
+140\. “Some ascetics and priests form this view and this theory: ‘Here in the present life, I partake of the five desires and indulge myself. This is the <em>nirvāṇa</em> that I’ve attained in the present.’ This is the first view.
 {:#p140}
 
-141\. “Again, some ascetics and priests say this: ‘This is Nirvāṇa in the present, nothing else is. Again, there’s Nirvāṇa in the present life that’s sublime and supreme. You don’t know of it; only I know it. I’ve departed from desire and bad and unskillful things. With perception and examination, that seclusion gave rise to joy and happiness, and I entered the first dhyāna. This is called Nirvāṇa in the present life.’ This is the second view.
+141\. “Again, some ascetics and priests say this: ‘This is <em>nirvāṇa</em> in the present, nothing else is. Again, there’s <em>nirvāṇa</em> in the present life that’s sublime and supreme. You don’t know of it; only I know it. I’ve departed from desire and bad and unskillful things. With perception and examination, that seclusion gave rise to joy and happiness, and I entered the first dhyāna. This is called <em>nirvāṇa</em> in the present life.’ This is the second view.
 {:#p141}
 
-142\. “Again, some ascetics and priests say this: ‘This is Nirvāṇa in the present, nothing else is. Again, there’s Nirvāṇa in the present life that’s sublime and supreme. You don’t know of it; only I know it. I ceased perception and examination. With inner joy, unified mind, and the absence of perception and examination, samādhi gave rise to joy and happiness, and I entered the second dhyāna. This is called Nirvāṇa in the present life.’ This is the third view.
+142\. “Again, some ascetics and priests say this: ‘This is <em>nirvāṇa</em> in the present, nothing else is. Again, there’s <em>nirvāṇa</em> in the present life that’s sublime and supreme. You don’t know of it; only I know it. I ceased perception and examination. With inner joy, unified mind, and the absence of perception and examination, samādhi gave rise to joy and happiness, and I entered the second dhyāna. This is called <em>nirvāṇa</em> in the present life.’ This is the third view.
 {:#p142}
 
-143\. “Again, some ascetics and priests say this: ‘This is Nirvāṇa in the present, nothing else is. Again, there’s Nirvāṇa in the present life that’s sublime and supreme. You don’t know of it; only I know it. I eliminated thought, discarded joy, and abided in happiness, equanimity, mindfulness, and a unified mind. I personally knew happiness as it’s declared by noble people and entered the third dhyāna. This is called Nirvāṇa in the present life.’ This is the fourth view.
+143\. “Again, some ascetics and priests say this: ‘This is <em>nirvāṇa</em> in the present, nothing else is. Again, there’s <em>nirvāṇa</em> in the present life that’s sublime and supreme. You don’t know of it; only I know it. I eliminated thought, discarded joy, and abided in happiness, equanimity, mindfulness, and a unified mind. I personally knew happiness as it’s declared by noble people and entered the third dhyāna. This is called <em>nirvāṇa</em> in the present life.’ This is the fourth view.
 {:#p143}
 
-144\. “Again, some ascetics and priests say this: ‘This is Nirvāṇa in the present, nothing else is. Again, there’s Nirvāṇa in the present life that’s sublime and supreme. You don’t know of it; only I know it. As my happiness and suffering ceased, it eliminated my prior sorrow and joy. Feeling neither pain nor pleasure, I was equanimous, mindful, and pure, and I entered the fourth dhyāna. This is called the supreme Nirvāṇa.’ This is the fifth view.
+144\. “Again, some ascetics and priests say this: ‘This is <em>nirvāṇa</em> in the present, nothing else is. Again, there’s <em>nirvāṇa</em> in the present life that’s sublime and supreme. You don’t know of it; only I know it. As my happiness and suffering ceased, it eliminated my prior sorrow and joy. Feeling neither pain nor pleasure, I was equanimous, mindful, and pure, and I entered the fourth dhyāna. This is called the supreme <em>nirvāṇa</em>.’ This is the fifth view.
 {:#p144}
 
-145\. “If ascetics and priests create these theories about future eons and Nirvāṇa in the present life, they don’t go beyond these five views. There’s only the Buddha who can know this … same as before.
+145\. “If ascetics and priests create these theories about future eons and <em>nirvāṇa</em> in the present life, they don’t go beyond these five views. There’s only the Buddha who can know this … same as before.
 {:#p145}
 
 146\. “Some ascetics and priests make countless and diverse statements as they like about future eons, and they all enter these 44 views and don’t go beyond them. There’s only the Buddha who can know this … same as before.
@@ -481,13 +481,13 @@ next: DA_22.html
 
 #### The Net of Views
 
-148\. “Some ascetics and priests create eternalist theories and say that self and the world are eternal. Those ascetics and priests regarding this possess the knowledge of [past] births, which is caused by a different faith, different desire, different learning, different relations, different understanding, different view, different samādhi, and different tolerance. Because it rarely occurs, it’s called an attainment … each ground of views is the same up to Nirvāṇa in the present life.
+148\. “Some ascetics and priests create eternalist theories and say that self and the world are eternal. Those ascetics and priests regarding this possess the knowledge of [past] births, which is caused by a different faith, different desire, different learning, different relations, different understanding, different view, different samādhi, and different tolerance. Because it rarely occurs, it’s called an attainment … each ground of views is the same up to <em>nirvāṇa</em> in the present life.
 {:#p148}
 
-149\. “Ascetics and priests create eternalist theories and say that the world is eternal. As a result of being conditioned by that ascertainment, they produce and give rise to craving, but they aren’t aware of it themselves. Being defiled and attached to craving, they submit to those cravings… each ground of views is the same up to Nirvāṇa in the present life.
+149\. “Ascetics and priests create eternalist theories and say that the world is eternal. As a result of being conditioned by that ascertainment, they produce and give rise to craving, but they aren’t aware of it themselves. Being defiled and attached to craving, they submit to those cravings… each ground of views is the same up to <em>nirvāṇa</em> in the present life.
 {:#p149}
 
-150\. “Some ascetics and priests create eternalist theories about past eons and say that the world is eternal. They do so as a result of being conditioned by contact. It would be impossible for them to establish their theories unless they were conditioned by contact… each ground of views is the same up to Nirvāṇa in the present.
+150\. “Some ascetics and priests create eternalist theories about past eons and say that the world is eternal. They do so as a result of being conditioned by contact. It would be impossible for them to establish their theories unless they were conditioned by contact… each ground of views is the same up to <em>nirvāṇa</em> in the present.
 {:#p150}
 
 151\. “Some ascetics and priests each speak according to their views about past and future eons. They all enter these 62 views by doing so. They each speak according to their views, and they all depend on those views, which they don’t go beyond.
