--- a/01_agama/dirgha/DA_25.md
+++ b/01_agama/dirgha/DA_25.md
@@ -128,7 +128,7 @@ Kāśyapa said, “Gautama, who hasn’t Gautama made rejoice greatly, attain pu
 36\. “Kāśyapa, would you say that the audience doesn’t shave their hair and beard, put on the three Dharma robes, leave home, and cultivate the path when the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly … and they believe, respect, and make offerings? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly … and they believe, respect, and make offerings, the audience shaves their hair and beard, put on the three Dharma robes, leave home, and cultivate the path.
 {:#p36}
 
-37\. “Kāśyapa, would you say that the audience doesn’t practice the ultimate religious practice and reach the peaceful abode, which is Nirvāṇa without remainder, when the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly … and they leave home and cultivate the path? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly … and they leave home and cultivate the path, the audience does practice the ultimate religious practice and reach a peaceful abode, which is Nirvāṇa without remainder.”
+37\. “Kāśyapa, would you say that the audience doesn’t practice the ultimate religious practice and reach the peaceful abode, which is <em>nirvāṇa</em> without remainder, when the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly … and they leave home and cultivate the path? Don’t imagine this. Why is that? When the Tathāgata courageously and fearlessly roars the lion’s roar in a great assembly … and they leave home and cultivate the path, the audience does practice the ultimate religious practice and reach a peaceful abode, which is <em>nirvāṇa</em> without remainder.”
 {:#p37}
 
 38\. Kāśyapa then said to the Buddha, “How, Gautama, do I leave home and accept the full precepts in this teaching?”
