--- a/01_agama/dirgha/DA_28.md
+++ b/01_agama/dirgha/DA_28.md
@@ -191,12 +191,12 @@ The wanderer said to the Buddha, “How is it, Gautama? How can I know the conce
 55\. The wanderer said to the Buddha, “Gautama, why don’t you explain the views: ‘Self and the world are permanent … The Tathāgata neither dies nor doesn’t die’? You don’t explain any of them?”
 {: #p55}
 
-The Buddha said, “These views aren’t compatible with meaning or with the teaching, nor with the religious life, dispassion, the unconditioned, cessation, calming, right awakening, the ascetic, or Nirvāṇa. That’s why I don’t explain them.”
+The Buddha said, “These views aren’t compatible with meaning or with the teaching, nor with the religious life, dispassion, the unconditioned, cessation, calming, right awakening, the ascetic, or <em>nirvāṇa</em>. That’s why I don’t explain them.”
 
-56\. The wanderer again asked, “What is compatible with meaning and the teaching? What is the beginning of the religious life? What is the unconditioned? What is dispassion? What is cessation? What is calming? What is right awakening? What is the ascetic? What is Nirvāṇa? What do you call explanation?”
+56\. The wanderer again asked, “What is compatible with meaning and the teaching? What is the beginning of the religious life? What is the unconditioned? What is dispassion? What is cessation? What is calming? What is right awakening? What is the ascetic? What is <em>nirvāṇa</em>? What do you call explanation?”
 {: #p56}
 
-The Buddha told the wanderer, “I explain the truth of suffering … formation of suffering … cessation of suffering … the truth of the escape from suffering. Why is that? They are compatible with meaning and with the teaching, and they are the leaders of the religious life, dispassion, the unconditioned, cessation, calming, right awakening, the ascetic, and Nirvāṇa. This is why I explain them.”
+The Buddha told the wanderer, “I explain the truth of suffering … formation of suffering … cessation of suffering … the truth of the escape from suffering. Why is that? They are compatible with meaning and with the teaching, and they are the leaders of the religious life, dispassion, the unconditioned, cessation, calming, right awakening, the ascetic, and <em>nirvāṇa</em>. This is why I explain them.”
 
 57\. The Bhagavān then taught the Dharma for the wanderer. After he was encouraged by its plain instruction, the Buddha rose from his seat and left.
 {: #p57}
@@ -219,10 +219,10 @@ The Buddha told the wanderer, “I explain the truth of suffering … formation 
 63\. The Buddha told the wanderer, “The wanderers asked, ‘Why were you listening to what the ascetic Gautama teaches and approving of what he said?’ It’s a mistake that they ask that. Why is that? The Dharma that I teach has a certain explanation and an uncertain explanation.
 {: #p63}
 
-64\. “What’s called the uncertain explanation? ‘Self and the world are permanent … the Tathāgata neither dies nor doesn’t die.’ I say these statements don’t have certain explanations. What’s the reason for this? They aren’t compatible with meaning or the teaching, nor with the beginning of the religious life, dispassion, the unconditioned, cessation, calming, right awakening, the ascetic, or Nirvāṇa. Why, wanderer, would I discuss these statements even though they don’t have certain explanations?
+64\. “What’s called the uncertain explanation? ‘Self and the world are permanent … the Tathāgata neither dies nor doesn’t die.’ I say these statements don’t have certain explanations. What’s the reason for this? They aren’t compatible with meaning or the teaching, nor with the beginning of the religious life, dispassion, the unconditioned, cessation, calming, right awakening, the ascetic, or <em>nirvāṇa</em>. Why, wanderer, would I discuss these statements even though they don’t have certain explanations?
 {: #p64}
 
-65\. “What’s called the certain explanation? I explain the truth of suffering … formation of suffering … cessation of suffering … truth of the escape from suffering. Why is that? These things are compatible with the teaching and meaning. They are leaders of the religious life, dispassion, the unconditioned, cessation, calming, right awakening, the ascetic, and Nirvāṇa, so I teach these certain explanations.
+65\. “What’s called the certain explanation? I explain the truth of suffering … formation of suffering … cessation of suffering … truth of the escape from suffering. Why is that? These things are compatible with the teaching and meaning. They are leaders of the religious life, dispassion, the unconditioned, cessation, calming, right awakening, the ascetic, and <em>nirvāṇa</em>, so I teach these certain explanations.
 {: #p65}
 
 66\. “Wanderer, perhaps an ascetic or priest claims that there’s one abode of the world that’s the only way to happiness. I would say to him, ‘You truly say that there’s one abode in the world that’s the only way to happiness?’
