--- a/01_agama/ekottarika/01/EA_01_01.md
+++ b/01_agama/ekottarika/01/EA_01_01.md
@@ -1077,7 +1077,7 @@ next: ../02/EA_02_01.html
 </tr>
   <tr>
     <td class='ch' title='T125.2.552a23'>時，尊者阿難告優多羅曰： 「汝前作轉輪聖王時，不失王教。 今復，以此法而相囑累。 不失正教，莫作凡夫之行。 汝今，當知，若有違失如來善教者，便墮凡夫地中。 何以故？ 時，王摩訶提婆不得至竟解脫之地。 未得解脫至安隱處。 雖受梵天福報，猶不至究竟如來善業，乃名究竟安隱之處。 快樂無極，天人所敬，必得涅槃。 以是之故，優多羅，當奉持此法。 諷、誦、讀念，莫令缺漏。」</td>
-    <td>Venerable Ānanda then told Uttara, “When you became a noble wheel-turning king before, you didn’t forget the king’s instructions. Now, you’ve been entrusted again with this Dharma. Don’t forget the correct teaching and don’t behave like ordinary people. Now, you should know that if anyone goes against the Tathāgata’s good teaching, they will fall back to the level of ordinary people. Why is that? At that time, King *Makhādeva hadn’t reached the published level of liberation. He had yet to attain that liberation and reach the place of safety. Although he got the rewards of the Brahma Heaven, he still didn’t reach the published good deeds of the Tathāgata, which is then called the published place of safety. For the happiness that’s infinite and honored by gods and humans, one must attain Nirvāṇa. Therefore, Uttara, you should accept and keep this Dharma. Chant, recite, and read it from memory, and don’t let it be lost.”</td>
+    <td>Venerable Ānanda then told Uttara, “When you became a noble wheel-turning king before, you didn’t forget the king’s instructions. Now, you’ve been entrusted again with this Dharma. Don’t forget the correct teaching and don’t behave like ordinary people. Now, you should know that if anyone goes against the Tathāgata’s good teaching, they will fall back to the level of ordinary people. Why is that? At that time, King *Makhādeva hadn’t reached the published level of liberation. He had yet to attain that liberation and reach the place of safety. Although he got the rewards of the Brahma Heaven, he still didn’t reach the published good deeds of the Tathāgata, which is then called the published place of safety. For the happiness that’s infinite and honored by gods and humans, one must attain <em>nirvāṇa</em>. Therefore, Uttara, you should accept and keep this Dharma. Chant, recite, and read it from memory, and don’t let it be lost.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.552b4'>爾時，阿難便説偈曰：</td>
@@ -1257,7 +1257,7 @@ next: ../02/EA_02_01.html
 <li id="n12"><p><em>breathe in and out.</em> C. <span class="ch">出入息</span>. This would likely be a reference to the mindfulness of breathing practice. [<a href="#ref12">back</a> ]</p></li>
 <li id="n13"><p><em>those freed by faith.</em> C. <span class="ch">信解脫</span>, P. <em>saddhāvimutta</em>. This refers to a level of trainee who has partially destroyed the contaminants and firmly planted their faith in the Tathāgata. Cf. MĀ 195 & MN 70, which discuss the stages of the trainee. This passage is saying that, aside from those who hadn’t achieved liberation or a measure of it, Buddhists had a difficult time accepting the authenticity of <em>bodhisattva</em> practices. [<a href="#ref13">back</a> ]</p></li>
 <li id="n14"><p><em>set out for awakening.</em> C. <span class="ch">發道意</span>. The straightforward reading of this expression is as a translation of S. <em>bodhi-cittopāda.</em>  Hirakawa lists possible underlying Indic expressions as S. <em>cittopāda,</em> <em>paribodhita,</em> and <em>bodhaye saṃprastithaḥ.</em> [<a href="#ref14">back</a> ]</p></li>
-<li id="n15"><p><em>land of the Śākya Lion.</em> C. <span class="ch">薩迦尸國</span> (EMC sat-kă-ʃɪi = G. *Sakaṣi-). My guess is that <span class="ch">薩迦尸</span> transliterated the equivalent of S. <em>śākyasiṃha</em> (“the Śākya Lion”), which in extant G. was <em>śakasiha</em>. I.e., the entire term refers to the Buddha’s homeland (Kapilavastu). This would match the story in EĀ 24.5, which says the Buddha visited his father after converting the Kāśyapa brothers. [<a href="#ref15">back</a> ]</p></li>
+<li id="n15"><p><em>land of the Śākya Lion.</em> C. <span class="ch">薩迦尸國</span> (EMC. sat-kă-ʃɪi = G. *Sakaṣi-). My guess is that <span class="ch">薩迦尸</span> transliterated the equivalent of S. <em>śākyasiṃha</em> (“the Śākya Lion”), which in extant G. was <em>śakasiha</em>. I.e., the entire term refers to the Buddha’s homeland (Kapilavastu). This would match the story in EĀ 24.5, which says the Buddha visited his father after converting the Kāśyapa brothers. [<a href="#ref15">back</a> ]</p></li>
 <li id="n16"><p>This is the opening of the first <em>sūtra</em> of the <cite>Ekottarika Āgama</cite> (EĀ 2.1). [<a href="#ref16">back</a> ]</p></li>
 <li id="n17"><p>This discribes the contents of Chapters 3 and 4. Kauṇḍinya was the first to understand the four noble truths, and this Subhadra is likely the last to be liberated just before the Buddha <em>parinirvāṇa</em>-ed. [<a href="#ref17">back</a> ]</p></li>
 <li id="n18"><p><em>a mixed piṭaka.</em> C. <span class="ch">雜藏</span>. This translation suggests that the fourth <em>piṭaka</em> in this school’s canon was called S. <cite>Saṃyukta</cite> rather than S. <cite>Kṣudraka</cite>. Nonetheless, the description sounds similar to the Theravāda’s <cite>Khuddaka Nikāya</cite>, containing a <em>jātaka</em> collection of stories illustrating the Bodhisattva’s practice and other <em>sūtra</em> collections. We are left to wonder what texts specifically were meant by the “expansive Mahāyāna doctrine” (C. <span class="ch">方等大乘義</span>, S. <em>vaipulya mahāyāna artha</em>). We can only guess. [<a href="#ref18">back</a> ]</p></li>
@@ -1269,7 +1269,7 @@ next: ../02/EA_02_01.html
 <li id="n22"><p><em>Vidyūttara.</em> C. <span class="ch">雷電優多羅</span> (EMC. ɪəu-ta-la = G. <em>utara</em>). Here, we have a translation of “lightning” and a transliteration of G. <em>utara.</em> I’ve guessed S. <em>vidyūttara</em> as a likely Indic equivalent.</p>
 <p><em>Devottara.</em> C. <span class="ch">天優多羅</span>. Here, we have a translation of Indic <em>deva</em> and transliteration of G. <em>utara</em>. I’ve adopted the S. equivalent of G. <em>deva</em> + <em>utara</em>.</p>
 <p><em>Brahmottara.</em> C. <span class="ch">梵優多羅</span> (EMC. bɪʌm ɪəu-ta-la = G. Braṃmotara). Here, we have a transliteration of G. <em>braṃma</em> + <em>utara</em>. The equivalent would be S. <em>Brahmottara</em>, which is attested in other contexts. [<a href="#ref22">back</a> ]</p></li>
-<li id="n23"><p><em>Makhādeva.</em> C. <span class="ch">摩訶提婆</span> (EMC mua-he-dei-bua = G. <em>Mahadeva</em>), P. <em>Makhādeva</em>, S. <em>Mahādeva</em>. The following <em>avadāna</em> story has parallels in other sources. In Pali, it’s found in Jā 541 and MN 83, where the king’s name is Makhādeva rather than Mahādeva, which is found in S. sources. In Chinese sources, the transliteration in both early and late translations is S. Mahādeva, too (cf. MĀ 67, T152 No. 87, and T211 C. 38, and EĀ 50.4). This is interesting insofar as the G. dialect transliterated to C. often changed <em>-kh-</em> to <em>-h-</em>. This raises the possibility that the P. tradition has preserved the original Prakrit pronunciation, while later S. sources did not when translated from G. I’ve adopted the P. equivalent based on this. [<a href="#ref23">back</a> ]</p></li>
+<li id="n23"><p><em>Makhādeva.</em> C. <span class="ch">摩訶提婆</span> (EMC. mua-he-dei-bua = G. <em>Mahadeva</em>), P. <em>Makhādeva</em>, S. <em>Mahādeva</em>. The following <em>avadāna</em> story has parallels in other sources. In Pali, it’s found in Jā 541 and MN 83, where the king’s name is Makhādeva rather than Mahādeva, which is found in S. sources. In Chinese sources, the transliteration in both early and late translations is S. Mahādeva, too (cf. MĀ 67, T152 No. 87, and T211 C. 38, and EĀ 50.4). This is interesting insofar as the G. dialect transliterated to C. often changed <em>-kh-</em> to <em>-h-</em>. This raises the possibility that the P. tradition has preserved the original Prakrit pronunciation, while later S. sources did not when translated from G. I’ve adopted the P. equivalent based on this. [<a href="#ref23">back</a> ]</p></li>
 <li id="n24"><p><em>Mango Park.</em> C. <span class="ch">甘梨園</span>. We don’t get a full location here, but <span class="ch">甘梨園</span> was used in T212 for the Āmravana of Vaisali, so I assume <span class="ch">甘梨</span> (lit. “sweet pear”) was intended as an approx. of S. <em>āmra</em> (mango). [<a href="#ref24">back</a> ]</p></li>
 <li id="n25"><p><em>rainbow.</em> C. <span class="ch">五色光</span>. Lit. “five-colored light.” [<a href="#ref25">back</a> ]</p></li>
 <li id="n26"><p><em>barber</em>. C. <span class="ch">劫比</span> (MC. kɪʌp-pii = G. <em>*kapi-</em>). I’m reading this transliteration as equivalent to P. <em>kappaka</em> (S. <em>kalpaka</em>), meaning a barber. It would fit the Indic parallels to this <em>jātaka</em> story (cf. Jā 541, MN 83). It is possible that this is a personal name that meant “like a barber” (i.e., G. <em>*kapika</em>). [<a href="#ref26">back</a> ]</p></li>
