--- a/01_agama/ekottarika/08/EA_08_01.md
+++ b/01_agama/ekottarika/08/EA_08_01.md
@@ -57,7 +57,7 @@ next: EA_08_02.html
 
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0560c06" target="_blank">T125.2.560c6-1a7</a>. I have not found a direct parallel for this <em>sūtra</em>, but the mythological story of an <em>asura</em> king who causes a solar eclipse was a common one in ancient India. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>yojana</em>. C. 由延 (MC. yiəu-yiɛn) or 由旬 (MC. yiəu-yiuĕn) = G. <em>yoyan[a]</em> = S/P. <em>yojana</em>. This was an Indian unit of distance equal to between five and nine miles. The ocean was assumed to be 84,000 <em>yojana</em>s deep and that Mount Sumeru rose another 84,000 <em>yojana</em>s above its surface. So, this <em>asura</em> king grew to the height of Indra’s palace at Sumeru’s summit while standing in the deepest part of the ocean. The sun and moon were considered to circle Sumeru at half the altitude of its summit, so he would have towered over them. Presumably, this was an ancient explanation for solar and lunar eclipses. [<a href="#ref2">back</a>]</p></li>
+<li id="n2"><p><em>yojana</em>. C. 由延 (MC. yiəu-yiɛn) or 由旬 (MC. yiəu-yiuĕn) = G. <em>yoyan[a]</em> = P/S. <em>yojana</em>. This was an Indian unit of distance equal to between five and nine miles. The ocean was assumed to be 84,000 <em>yojana</em>s deep and that Mount Sumeru rose another 84,000 <em>yojana</em>s above its surface. So, this <em>asura</em> king grew to the height of Indra’s palace at Sumeru’s summit while standing in the deepest part of the ocean. The sun and moon were considered to circle Sumeru at half the altitude of its summit, so he would have towered over them. Presumably, this was an ancient explanation for solar and lunar eclipses. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>digest</em>. C. 消化. While the C. here doesn’t specify the gifts are food, this verb is used throughout EĀ to mean digestion of food. It could also mean to extinguish a fire, and digestion was thought to occur as a result of an inner fire in other passages (cf. <a href="suttacentral.net/ea28.4" target="_blank">EĀ 28.4</a> at <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0652a24" target="_blank">T125.2.652a24</a>). So, there may be a double-meaning here between digestion and <em>nirvāṇa</em>, as they both involve meanings of extinguishment (one physical and one spiritual). [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
