--- a/01_agama/ekottarika/10/EA_10_01.md
+++ b/01_agama/ekottarika/10/EA_10_01.md
@@ -14,7 +14,7 @@ next: EA_10_02.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of Nirvāṇa.[\[2\]](#n2){:#ref2} What’s that one thing? It’s the practice of carefulness. What is the practice of carefulness? It’s guarding the mind. And what is guarding the mind?
+2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of <em>nirvāṇa</em>.[\[2\]](#n2){:#ref2} What’s that one thing? It’s the practice of carefulness. What is the practice of carefulness? It’s guarding the mind. And what is guarding the mind?
 {:#p2}
 
 3\. “Here, a monk always guards his mind against being contaminated and contaminating things. When he guards his mind against being contaminated and contaminating things, then he’ll feel comfortable around contaminating things. He’ll also become confident, remain unmoved, keep his thinking focused, and encourage himself.
@@ -45,7 +45,7 @@ While the prideful do die.
 ### Notes
 
 1. {:#n1} This <em>sūtra</em> and the next are similar to [Iti 23](https://www.suttacentral.net/iti23), but the Pali *sutta* includes less context. [\[back\]](#ref1)
-2. {:#n2} *cultivate one thing … realm of Nirvāṇa*. This passage is nearly verbatim the passage found in the introductions of [EĀ 2.1-10](../02/EA_02_01.html){:target="_blank"}. The main variation is that “dispel their confused ideas” (去衆亂想) has been replaced with “pacify their conditioned thinking” (諸行寂靜), and the “abode of Nirvāṇa” has become the “realm of Nirvāṇa” (S. *nirvāṇadhātu*). The former is repeated in the next <em>sūtra</em>, but the latter appears spurious. I’ve translated 諸行 with the prior passage in mind as “conditioned thinking” since it seems to be a synomym of “confused ideas” (亂想). Another possibility is that it refers to modes of conduct (e.g., mental, verbal, and physical). [\[back\]](#ref2)
+2. {:#n2} *cultivate one thing … realm of nirvāṇa*. This passage is nearly verbatim the passage found in the introductions of [EĀ 2.1-10](../02/EA_02_01.html){:target="_blank"}. The main variation is that “dispel their confused ideas” (去衆亂想) has been replaced with “pacify their conditioned thinking” (諸行寂靜), and the “abode of Nirvāṇa” has become the “realm of Nirvāṇa” (S. *nirvāṇadhātu*). The former is repeated in the next <em>sūtra</em>, but the latter appears spurious. I’ve translated 諸行 with the prior passage in mind as “conditioned thinking” since it seems to be a synomym of “confused ideas” (亂想). Another possibility is that it refers to modes of conduct (e.g., mental, verbal, and physical). [\[back\]](#ref2)
 
 ---
 
