--- a/01_agama/ekottarika/10/EA_10_02.md
+++ b/01_agama/ekottarika/10/EA_10_02.md
@@ -14,7 +14,7 @@ next: EA_10_03.html
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “One must develop one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll then attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of Nirvāṇa. What’s that one thing? It’s the practice of carefulness in the good teachings.
+2\. It was then that the Bhagavān addressed the monks, “One must develop one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll then attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of <em>nirvāṇa</em>. What’s that one thing? It’s the practice of carefulness in the good teachings.
 {:#p2}
 
 3\. “What is this practice of carefulness? It means not harassing any sentient being, not harming any sentient being, and not troubling any sentient being. This is called the practice of carefulness. What’s called the good teachings? It means the noble eightfold path, which is right view, right method, right speech, right action, right livelihood, right discipline, right mindfulness, and right samādhi.[\[1\]](#n1){:#ref1} These are the good teachings.”
