--- a/01_agama/ekottarika/13/EA_13_03.md
+++ b/01_agama/ekottarika/13/EA_13_03.md
@@ -181,8 +181,8 @@ This <em>sūtra</em> is titled Nāḷijaṅgha (竹膞, lit. “bamboo shank”)
 The most interesting difference between these versions is that the Jātaka story makes no mention of a false rumor or the argument between Prasenajit and Queen Mālikā. This suggests that perhaps the canonical <em>sūtra</em> version has been greatly expanded. Given this, we can see why some versions were titled after the initial story, for it was the original name of a text that was built up. The tradition represented by EĀ perhaps put more emphasis on the teaching the Buddha gives to Nāḷijaṅgha at the midpoint of the narrative and titled the <em>sūtra</em> accordingly. [\[back\]](#ref1)
 2. {:#n2} <em>Nāḷijaṅgha</em>. C. 竹膊. The Taisho reading here translates the priest’s name to C. 竹膊, which lit. means “bamboo shoulder.” 竹 generally agrees with the P. <em>nāḷi</em>, which means a “tube.” Bamboo stalks are hollow tubes. However, there was some confusion between 膊 (“shoulder”) and 膞 (“shank”), where 膊 appears in the <em>sūtra</em> text and 膞 in the summary verse. Given that 膞 agrees with P. and S. <em>jaṅgha</em> and how easily the two characters could be mistaken for each other, I’m assuming that 膊 was a copyist error. [\[back\]](#ref2)
 3. {:#n3} <em>Vaiḍūrya</em>. C. 琉璃. The C. here (lit. “beryl” or “emerald”) typically translates S. <em>vaiḍūrya</em> (G. <em>veḍuriya</em>). This may refer to the same prince that P. names <em>viḍūḍabha</em> or <em>viṭaṭūbha</em>, given the instability of personal names we sometimes see in Buddhist texts. There is also a C. alt. reading as 流離 (EMC. lɪəu-lɪĕ, meaning lit. “stream let go”), but it doesn’t suggest an Indic name that I recognize. I’ve adopted the straightforward S. equivalent of the C. for the time being. [\[back\]](#ref3)
-4. {:#n4} <em>Ela</em>. C. 伊羅 (EMC ɪi-la = G. <em>ela</em>?). This name is unknown to me as a prince of Prasenajit. The C. translit. could represent Indic sounds like G. <em>ela</em> (“water”), <em>era</em>, <em>ira</em> (a Babylonian month), or <em>ila</em>. The ending of the name has likely been truncated, but it’s difficult to guess what it was. [\[back\]](#ref4)
-5. {:#n5} <em>Śaradā</em>. C. 薩羅陀 (EMC sat-la-da = G. <em>sarada</em>?). 翻梵語 (T2130.54.1019c23) says that the translit. should be 賖羅陀 (EMC ʃɪă-la-da = G. <em>śarada</em>, lit. “autumn”) and claims that the word means “clear and bright” (perhaps referring to the autumn moon). P. has instead Vāsabhā for this name. It also indicates that this is a warrior woman. The C. gives no indication of gender here, but shortly she’ll be referred to as one of Prasenajit’s wives. [\[back\]](#ref5)
+4. {:#n4} <em>Ela</em>. C. 伊羅 (EMC. ɪi-la = G. <em>ela</em>?). This name is unknown to me as a prince of Prasenajit. The C. translit. could represent Indic sounds like G. <em>ela</em> (“water”), <em>era</em>, <em>ira</em> (a Babylonian month), or <em>ila</em>. The ending of the name has likely been truncated, but it’s difficult to guess what it was. [\[back\]](#ref4)
+5. {:#n5} <em>Śaradā</em>. C. 薩羅陀 (EMC. sat-la-da = G. <em>sarada</em>?). 翻梵語 (T2130.54.1019c23) says that the translit. should be 賖羅陀 (EMC. ʃɪă-la-da = G. <em>śarada</em>, lit. “autumn”) and claims that the word means “clear and bright” (perhaps referring to the autumn moon). P. has instead Vāsabhā for this name. It also indicates that this is a warrior woman. The C. gives no indication of gender here, but shortly she’ll be referred to as one of Prasenajit’s wives. [\[back\]](#ref5)
 
 ---
 
