--- a/01_agama/ekottarika/13/EA_13_06.md
+++ b/01_agama/ekottarika/13/EA_13_06.md
@@ -66,7 +66,7 @@ For their teaching is the Supreme Victor’s.”
 
 1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn11.16" target="_blank">SN 11.16</a>, SĀ 19.21-22, and T100.52. [\[back\]](#ref1)
 2. {:#n2} <em>Śakra the Lord of Gods</em>. C. 釋提桓因 (EMC. ʃɪɛk-dei-ɦuan-•iĕn = G. <em>śak[ra]-devan[aṃ]-iṃ[dra]</em> = S. <em>śakro-devānām-indrah</em>). This was a well-known abbreviated translit. for Śakra’s full title as the Lord of Gods. The <em>-v-</em> in <em>deva</em> was pronounced as a <em>-w-</em>. [\[back\]](#ref2)
-3. {:#n3} <em>cessation</em>. Here, 無 appears to be a verb meaning “to become inexistent,” which I take to refer to Nirvāṇa. I’ve translated it more literally as “cessation.” [\[back\]](#ref3)
+3. {:#n3} <em>cessation</em>. Here, 無 appears to be a verb meaning “to become inexistent,” which I take to refer to <em>nirvāṇa</em>. I’ve translated it more literally as “cessation.” [\[back\]](#ref3)
 4. {:#n4} <em>Kauśika</em>. C. 拘翼 (EMC. kɪu-yiək). G. <em>koyig[a]</em> > G. <em>kośiga</em>? > S. <em>kauśika</em>. The derivation of what the C. transliterates is unclear to me since it’s not typical that <em>-ś-</em> becomes <em>-y-</em> in G. sources, but it appears to be the case here.<br/>
 I’ve followed the alternate reading, which makes this last stanza the Buddha’s conclusion. The Taisho reads 瞿曇 (“Gautama”) instead, which would make it Śakra addressing the Buddha. [\[back\]](#ref4)
 
