--- a/01_agama/ekottarika/14/EA_14_04.md
+++ b/01_agama/ekottarika/14/EA_14_04.md
@@ -14,7 +14,7 @@ next: EA_14_05.html
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of Nirvāṇa. What is that one thing? It’s generosity.”
+2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s generosity.”
 {:#p2}
 
 3\. The Buddha told the monks, “If a person widely practices generosity, they’ll attain the forms and powers that are perfected by many virtues.[\[1\]](#n1){:#ref1} They’ll enjoy the food and merits that are up in Heaven and among humans, which are measureless …
