--- a/01_agama/ekottarika/14/EA_14_10.md
+++ b/01_agama/ekottarika/14/EA_14_10.md
@@ -14,7 +14,7 @@ next: ../15/EA_15_01.html
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “There isn’t anything in this assembly greater than this one thing[\[1\]](#n1){:#ref1} that when cultivated and cultivated often brings the merits that are among humans, merits up in Heaven, and attains the realization of Nirvāṇa. What is that one thing? It’s not drinking alcohol.”
+2\. It was then that the Bhagavān addressed the monks, “There isn’t anything in this assembly greater than this one thing[\[1\]](#n1){:#ref1} that when cultivated and cultivated often brings the merits that are among humans, merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not drinking alcohol.”
 {:#p2}
 
 3\. The Buddha told the monks, “If a person doesn’t drink alcohol and doesn’t think about drinking alcohol, they’ll be born intelligent, have no foolish delusions, and widely know the <em>sūtra</em>s. Their mind won’t be in disarray … 
