--- a/01_agama/ekottarika/24/EA_24_05.md
+++ b/01_agama/ekottarika/24/EA_24_05.md
@@ -184,7 +184,7 @@ Then, he was named Ajñāta Kauṇḍinya.
 38\. It was then that the Bhagavān told the five monks, “You two stay here and receive instruction, and you three go and solicit alms. When the three of you have gotten alms, then the six of us will share a meal. You three then will stay to receive instruction, and you two go to solicit alms. When the two of you have gotten alms, the six of us will take our meal.”
 {:#p38}
 
-39\. He instructed them for a time, and they achieved the birthless quality of Nirvāṇa, and they became birthless, healthy, ageless, and deathless. The five monks then all became arhats. At that point, there were five arhats, and the Buddha was the sixth in the three thousand great thousand lands.
+39\. He instructed them for a time, and they achieved the birthless quality of <em>nirvāṇa</em>, and they became birthless, healthy, ageless, and deathless. The five monks then all became arhats. At that point, there were five arhats, and the Buddha was the sixth in the three thousand great thousand lands.
 {:#p39}
 
 40\. It was then that the Bhagavān addressed the five monks, “All of you go together to solicit alms from people. Be heedful, and don’t go alone. When there are sentient beings whose faculties are fully matured, they should be liberated. I’m going to Uruvilvā to explain the teaching there.”
