--- a/01_agama/ekottarika/24/EA_24_06.md
+++ b/01_agama/ekottarika/24/EA_24_06.md
@@ -145,10 +145,10 @@ Nor associate with enmities.
 
 * {:.verse}Destroy the pain of the five aggregates\\
 And the painful vexations of birth and death;\\
-Nirvāṇa has none of these dangers:\\
+<em>nirvāṇa</em> has none of these dangers:\\
 ‘I now take refuge there.’
 
-37\. “Therefore, monks, if there are good men and good women who wish to keep the eight fasting observances and part with suffering, who wish to attain a good abode, and who wish to attain the end of contaminants and enter the city of Nirvāṇa, they should seek the methods that achieve these eight fasting observances. Why is that? Among humans, the splendid state isn’t enough to be valued, for the delights up in heaven are unimaginable. If good men and good women want to seek the unsurpassed merit, they should seek the methods that achieve these fasting rules.
+37\. “Therefore, monks, if there are good men and good women who wish to keep the eight fasting observances and part with suffering, who wish to attain a good abode, and who wish to attain the end of contaminants and enter the city of <em>nirvāṇa</em>, they should seek the methods that achieve these eight fasting observances. Why is that? Among humans, the splendid state isn’t enough to be valued, for the delights up in heaven are unimaginable. If good men and good women want to seek the unsurpassed merit, they should seek the methods that achieve these fasting rules.
 {:#p37}
 
 38\. “Now, I’ll again admonish you: If there are good men and good women who achieve the eight fasting observances, and they want to be born among the four god kings, they will get that aspiration. A precept-keeper obtains that to which they aspire. It’s because of this that I just teach this aim. Among humans, the splendid state is not enough to be valued. If good men or good women observe these eight fasting observances, they’ll be born to a good abode up in heaven when their bodies break up and their lives end. They’ll also be born in Yama’s Heaven, the Tuṣita Heaven, the Nirmāṇarati Heaven, and the Paranirmitavaśavartin Heaven. It’ll never be for naught. Why is that? Those who keep the precepts obtain that to which they aspire.
