--- a/01_agama/ekottarika/50/EA_50_06.md
+++ b/01_agama/ekottarika/50/EA_50_06.md
@@ -29,7 +29,7 @@ next: EA_50_08.html
 6\. “I know the way leading to heaven, the merits that sentient beings make that are its origins, and I know those born up in the heavens, too.
 {: #p6}
 
-7\. “I also know the way to Nirvāṇa and those sentient beings who’ve ended the contaminants. Becoming uncontaminated, their minds are liberated, and their wisdom is liberated. In the present life, they’ve grasped and realized that result. I know of them, too.
+7\. “I also know the way to <em>nirvāṇa</em> and those sentient beings who’ve ended the contaminants. Becoming uncontaminated, their minds are liberated, and their wisdom is liberated. In the present life, they’ve grasped and realized that result. I know of them, too.
 {: #p7}
 
 8\. “Monks, you should know, ‘I know the way to hell.’ What are the causes and conditions for saying this?”
@@ -83,7 +83,7 @@ next: EA_50_08.html
 24\. “This is likewise. Now, I observe this type of sentient being, ‘After their body breaks up and their life ends, they would be born in a good place up in heaven where they will experience delights that aren’t imaginable.’ How was this person born in a good place up in heaven? I know the destiny of heaven and the path leading to heaven. What I say about it is correct; it’s simply what it is.
 {: #p24}
 
-25\. “Now, I know Nirvāṇa, and I know the path to Nirvāṇa. I also know that a sentient will [enter] parinirvāṇa. Perhaps there’s a sentient being that ends the contaminants. Becoming uncontaminated, their mind is liberated, and their wisdom is liberated. In their present body, they grasp this realization and become a wandering teacher. I fully know of them.
+25\. “Now, I know <em>nirvāṇa</em>, and I know the path to <em>nirvāṇa</em>. I also know that a sentient will [enter] parinirvāṇa. Perhaps there’s a sentient being that ends the contaminants. Becoming uncontaminated, their mind is liberated, and their wisdom is liberated. In their present body, they grasp this realization and become a wandering teacher. I fully know of them.
 {: #p25}
 
 26\. “What are the causes and conditions for saying this? Here, monks, I observe the thoughts in the mind of a type of sentient being: ‘This person will end the contaminants. Becoming uncontaminated, their mind will be liberated, and their wisdom will be liberated.’ Saying this, the person ends the contaminants and becomes uncontaminated.
@@ -92,7 +92,7 @@ next: EA_50_08.html
 27\. “It’s like a village that has a large lake not far away, and its water is crystal clear. Suppose someone comes along on a path, and a man with eyes sees this person coming and knows: ‘This person will surely arrive at this lake, undoubtedly.’ Again, he later observes this person after they arrive at the lake, bathing and washing away their defilements until the dirt is removed. They then sit on the shore without any quarrel with anyone else.
 {: #p27}
 
-28\. “Now, I observe this type of sentient being likewise who ends the contaminants. Becoming uncontaminated, their mind is liberated, and their wisdom is liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ This is called a realized person. This person has arrived there. I know the path of Nirvāṇa, and I know the sentient beings who [enter] parinirvāṇa. I fully know of them.
+28\. “Now, I observe this type of sentient being likewise who ends the contaminants. Becoming uncontaminated, their mind is liberated, and their wisdom is liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ This is called a realized person. This person has arrived there. I know the path of <em>nirvāṇa</em>, and I know the sentient beings who [enter] parinirvāṇa. I fully know of them.
 {: #p28}
 
 29\. “The Tathāgata, Arhat, and Completely Awakened One has this knowledge, fearlessness, and power that he has fully accomplished. The Tathāgata’s knowledge is without measure. The Tathāgata can observe past limitless, measureless, and unimaginable events. He fully knows them. He fully discerns future and present events that are limitless and measureless, too. Therefore, monks, you should seek the methods to perfect the ten powers and [four] types of fearlessness. Thus, monks, should you train.”
