--- a/01_agama/ekottarika/50/EA_50_08.md
+++ b/01_agama/ekottarika/50/EA_50_08.md
@@ -72,10 +72,10 @@ The monks replied, “Indeed, Bhagavān. We have not heard the Tathāgata teach 
 15\. “It’s like someone who leaves a village in search of a dangerous snake. If they see an enormous snake, they grab its tail with their left hand, but that snake’s head twists around to bite them. As a result of that, their life may well end. This person is likewise. Suppose a foolish person studies the teachings in the twelvefold sūtras and doesn’t do it adequately for any one of them or examine their meaning. The reason is that they make use what’s not the ultimate meaning of the correct teaching.
 {:#p15}
 
-16\. “Here, suppose a good son preserves and studies those teachings, which are the sūtras, songs, verses, assurances, circumstances, records, legends, births, extensive discourses, unprecedented things, lectures, and explanations. After that man recites these teachings, he deeply understands their meaning. By understanding the deep meaning of the teachings, he follows their instructions without any shortcomings. He doesn’t recite and study the teachings with the idea of victory or defeat or to argue with others. Those who recite and study the teachings want to collect and cultivate their investigations. Those who recite the teachings as a result have the aspiration to bring about the causes and conditions that gradually arrive at Nirvāṇa.
+16\. “Here, suppose a good son preserves and studies those teachings, which are the sūtras, songs, verses, assurances, circumstances, records, legends, births, extensive discourses, unprecedented things, lectures, and explanations. After that man recites these teachings, he deeply understands their meaning. By understanding the deep meaning of the teachings, he follows their instructions without any shortcomings. He doesn’t recite and study the teachings with the idea of victory or defeat or to argue with others. Those who recite and study the teachings want to collect and cultivate their investigations. Those who recite the teachings as a result have the aspiration to bring about the causes and conditions that gradually arrive at <em>nirvāṇa</em>.
 {:#p16}
 
-17\. “It’s like someone who leaves the village looking for a dangerous snake. After seeing the snake, they use a metal fork to first pin its head. After that, they grasp its neck to prevent it from moving. If that dangerous snake were to twist around wanting to hurt the person, it’ll never reach him. That’s the reason, monks, that they grasp it by its neck. This good son is likewise. Reciting and studying the teachings, there’s none that he doesn’t penetrate. He examines their meaning and follows their principles without any shortcomings. Because of these causes and conditions, he gradually arrives at Nirvāṇa. That’s the reason he grasps the correct teaching.
+17\. “It’s like someone who leaves the village looking for a dangerous snake. After seeing the snake, they use a metal fork to first pin its head. After that, they grasp its neck to prevent it from moving. If that dangerous snake were to twist around wanting to hurt the person, it’ll never reach him. That’s the reason, monks, that they grasp it by its neck. This good son is likewise. Reciting and studying the teachings, there’s none that he doesn’t penetrate. He examines their meaning and follows their principles without any shortcomings. Because of these causes and conditions, he gradually arrives at <em>nirvāṇa</em>. That’s the reason he grasps the correct teaching.
 {:#p17}
 
 18\. “Therefore, monks, those who understand my meaning should mindfully approve of it. Those who don’t understand it should come repeatedly and question me. Make use of the Tathāgata while he’s present; regret won’t be of help to you later.”
