--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -106,11 +106,11 @@ next: MA_003.html
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0422a18" target="_blank">T26.1.422a18-c8</a>. Direct parallels to this <em>sūtra</em> include <a href="https://suttacentral.net/an7.69" target="_blank">AN 7.69</a>, EĀ 39.2, and T28. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>Trāyastriṃśa Heaven</em>. C. <span class="ch">三十三天</span>, G. <em>trayatriśa</em>, P. <em>tāvatiṃsa</em>, S. <em>trāyastriṃśa</em>. The C. translates S. <em>trāyastriṃśa</em> lit. as “Heaven of the Thirty-Three.” This was a Buddhist heaven where thirty-two Vedic gods and Indra reside at the top of Mount Sumeru. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>pārijāta</em>. C. <span class="ch">晝度</span> (EMC <em>tɪəu-do</em>), G. ?, P. <em>pāricchattaka</em>, S. <em>pārijātaka</em>. Previously, I believed that the C. was perhaps a partial transliteration (<em>-jāta</em>), based on the Mandarin pronunciation of <span class="ch">晝度</span> (M. <em>zhòudù</em>), but the EMC pronunciation (EMC <em>tɪəu-do</em>) doesn’t support this idea. It seems instead to be an interpretive translation that means lit. “day liberation,” which we find in EĀ, too. In any case, I’ve decided to replace the C. with the S. name.</p>
+<li id="n3"><p><em>pārijāta</em>. C. <span class="ch">晝度</span> (EMC. <em>tɪəu-do</em>), G. ?, P. <em>pāricchattaka</em>, S. <em>pārijātaka</em>. Previously, I believed that the C. was perhaps a partial transliteration (<em>-jāta</em>), based on the Mandarin pronunciation of <span class="ch">晝度</span> (M. <em>zhòudù</em>), but the EMC. pronunciation (EMC. <em>tɪəu-do</em>) doesn’t support this idea. It seems instead to be an interpretive translation that means lit. “day liberation,” which we find in EĀ, too. In any case, I’ve decided to replace the C. with the S. name.</p>
 <p>This is also the present-day name for <a href="https://en.wikipedia.org/wiki/Nyctanthes_arbor-tristis" target="_blank"><em>Nyctanthes arbor-tristis</em></a>, which is commonly called the night-flowering jasmine tree in English. Perhaps more relevant to this <em>sūtra</em>, however, is the sacred Parijat tree located in the modern village of Kintoor of Uttar Pradesh in India. This Parijat tree is actually a Baobab tree estimated to be 800 years old and from a species native to Africa. Local Hindu legends claim that it descends from a tree brought from the heavens by Arjun, or that it was a gift made by Lord Krishna. It’s existence suggests that there was a sacred tree tradition that dates back at least to classical times. This <em>sūtra</em> may be a Buddhist adaptation of this Vedic tradition. While Buddhists created their own sacred tree connected to the Buddha’s awakening, they incorporated this sacred tree as well that was connected to the Vedic gods. [<a href="#ref3">back</a>]</p></li>
 <li id="n4"><p><em>grows a web of buds</em>. C. <span class="ch">生網</span>. The Pali parallel reads: <em>Na cirass’eva dāni jālakajāto bhavissati</em>. Bhikkhu Bodhi reports that the Manorathapūraṇī commentary says: “The occasion when the tree gives birth to webs of leaves and flower, which come forth together.” C. 網 can also mean “web.” I take it to describe the overall appearance of a budding tree, so I’ve added “buds” to my translation. [<a href="#ref4">back</a>]</p></li>
 <li id="n5"><p><em>grow into bird beaks</em>. C. <span class="ch">生如鳥喙</span>. Pali: <em>Na cirass’eva dani kharakajato bhavissati</em>. Bhikkhu Bodhi translates the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The C. 鳥喙 lit. means “bird beak;” presumably, it refers to the shape of the buds as they grow larger and prepare to open. [<a href="#ref5">back</a>]</p></li>
-<li id="n6"><p><em>hundred </em>yojana<em>s</em>. C. <span class="ch">百由延</span> (EMC “hundred” + <em>yiəu-yiɛn</em> = G. <em>śada yoyan[a]</em>). S. <em>yojana</em> was an ancient Indic measure of distance. Traditional accounts of a <em>yojana</em>’s length range from 7 to 9 miles. [<a href="#ref6">back</a>]</p></li>
+<li id="n6"><p><em>hundred </em>yojana<em>s</em>. C. <span class="ch">百由延</span> (EMC. “hundred” + <em>yiəu-yiɛn</em> = G. <em>śada yoyan[a]</em>). S. <em>yojana</em> was an ancient Indic measure of distance. Traditional accounts of a <em>yojana</em>’s length range from 7 to 9 miles. [<a href="#ref6">back</a>]</p></li>
 <li id="n7"><p><em>shave off their hair and beard, put on the reddish-brown robes, become a believer, and leave home to train on the path in homelessness</em>. C. <span class="ch">剃除鬚髮，著袈裟衣，至信，捨家，無家，學道</span>, P. <em>kesamassuṁ ohāretvā kāsāyāni vatthāni acchādetvā agārasmā anagāriyaṁ pabbajito</em>, S. <em>keśaśmaśru avatārya kāṣāyāṇi vastrāṇy ācchādya samyag eva śraddhayā agārād anagārikāṁ pravrajitaḥ</em></p>
 <p>This standard description of a faithful man going forth to become a monk is nearly identical with the P. version: <span class="ch">剃除鬚髮</span> = <em>kesamassuṁ ohāretvā</em>, <span class="ch">著袈裟衣</span> = <em>kāsāyāni vatthāni acchādetvā</em>, <span class="ch">捨家無家</span> = <em>agārād anagārikāṁ</em>, <span class="ch">學道</span> = <em>pabbajito</em>. The exception is “becoming a believer” (<span class="ch">至信</span>, lit. “utmost faith”), and this addition is found in SĀ and extant S. sources like the <cite>Avadānaśataka</cite> as well. On the other hand, there is a shorter version of this pericope in DĀ that reads: “shave off their hair and beard, put on the three-piece robe, and leave home to cultivate the path” (<span class="ch">剃除鬚髮，服三法衣，出家修道</span>). [<a href="#ref7">back</a>]</p></li>
 <li id="n8"><p><em>first meditation.</em> C. <span class="ch">初禪</span> (EMC. “first” + <em>ʒɪɛn</em> = G. <em>paḍhama j̄ana</em>), G. <em>paḍhama j̄ana</em>, P. <em>paṭhama jhāna</em>, S. <em>prathama dhyāna</em>.</p>
@@ -141,7 +141,7 @@ next: MA_003.html
 <p>Xuanzang translated S. <em>cetasa ekotībhāva</em> as “mind with a single inclination” (<span class="ch">心一趣性</span>). This was glossed in this way: “Because of the subsidence of seeking and examining things, the mind is not scattered, not confused, and not flowing. It securely rests on a single point, so it’s called mind with a single inclination.” (<span class="ch">尋伺寂靜故，心不散不亂不流。安住一境，故名心一趣性。</span>)</p>
 <p><em>without noticing or examining things, <em>samādhi</em> produces joy and happiness, and they accomplish and dwell in the second meditation.</em> C. <span class="ch">無覺、無觀，定生喜樂，得第二禪成就遊</span>, P. <em>avitakkaṁ avicāraṁ samādhijaṁ pītisukhaṁ dutiyaṁ jhānaṁ upasampajja viharati</em>, S. <em>avitarkam avicāraṃ samādhijaṃ prītisukhaṃ dvitīyaṃ dhyānam upasaṃpadya viharati</em>. In this second stage of meditation, the wandering mind settles down. This allows <em>samādhi</em> to be established, which causes a renewed joy and happiness to arise.</p>
 <p><em>without noticing or examining things</em>. C. <span class="ch">無覺、無觀</span>, P. <em>avitakkaṁ avicāraṁ</em>, S. <em>avitarkam avicāraṃ</em>. The commentary elaborates by saying that in the second meditation seeking and examining is not found, is not actively manifest, and doesn’t exist.</p>
-<p><em><em>samādhi</em> produces joy and happiness</em>. C. <span class="ch">定生喜樂</span>, P. <em>samādhijaṃ prītisukhaṃ</em>, S. <em>samādhijaṃ prītisukhaṃ</em>.</p>
+<p><em>samādhi</em> produces joy and happiness</em>. C. <span class="ch">定生喜樂</span>, P. <em>samādhijaṃ prītisukhaṃ</em>, S. <em>samādhijaṃ prītisukhaṃ</em>.</p>
 <p>The C. translation of <em>samādhi</em> was <span class="ch">定</span>, which meant “fixed, established, settled, stabilized,” but English translators typically disregard this and translate <span class="ch">定</span> as “concentration.” In Buddhist language, which was not very different from Sanskrit literature in this case, <em>samādhi</em> meant fixing the mind on one subject without distraction, which was considered a purification of mind. It was also described as the merging of the subject and object in the mind. Given this special usage, I’ve chosen not to translate the term to English.</p>
 <p>The commentary in the <cite>Dharmaskandha</cite> describes <em>samādhi</em> as the mind resting, completely resting, resting nearby, and resting securely in someone in whom seeking and examining has subsided. Their mind is not scattered or distracted. It’s collected and fully maintained, and it has a single-pointed nature.</p>
 <p>Joy and happiness are defined in the same way as they were in the first meditation, except that here it is the subsiding of seeking and examining that produces the <em>samādhi</em> that produces this joy and happiness.</p>
@@ -179,7 +179,7 @@ next: MA_003.html
 <p><em>They truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’</em> C. <span class="ch">『生已盡，梵行已立，所作已辦。不更受有，』知如眞。</span>, P. <em>‘Khīṇā jāti, vusitaṁ brahmacariyaṁ, kataṁ karaṇīyaṁ, nāparaṁ itthattāyā’ti pajānāti. </em>, S. <em>kṣīṇā me jātir uṣitaṃ brahmacaryaṃ kṛtaṃ karaṇīyaṃ nāparam asmād bhavaṃ prajānāmi</em>. This second half of the C. passage is found in P. sources in a nearly identical form, except for the ending. <span class="ch">生已盡</span> = <em>khīṇā jāti</em>, <span class="ch">梵行已立</span> = <em>vusitaṁ brahmacariyaṁ</em>, and <span class="ch">所作已辦</span> = <em>kṛtaṃ karaṇīyaṃ</em>. However, <span class="ch">不更受有</span> only approximates the meaning of <em>nāparaṁ itthattāyā</em>, which lit. means “no more being here.” Specifically, the last word <span class="ch">有</span> would mostly likely trans. <em>bhava</em> (“existence”).</p>
 <p>S. sources preserve at least a couple different conclusions to this passage: One reads <em>asmād bhavaṃ</em> (“my existence”) and another <em>ithyātvam</em> (“being here”). They also sometimes match our MĀ passage’s <span class="ch">知如眞</span> with <em>yathābhūtaṃ prajānāti</em>, where P. sources have a single verb like <em>pajānāti</em> or <em>abbhaññāsi</em>. We can see from this brief survey that the last two parts of the passage varied somewhat between textual traditions.</p>
 <p>In terms of the Sarvāstivāda interpretation of this passage, we can turn to a section of the <cite>Jñānaprasthāna</cite>. The text depicts a practitioner thinking this about ending birth, establishing the practice, and accomplishing the task: “This is the path; this is the practice. Based on this path and this practice, I have fully known suffering, forever ended its formation, realized its cessation, and cultivated the path.” This is clearly criticized as a form of arrogance in the commentary, but it shows the basic meaning that the passage implied to the author. [<a href="#ref12">back</a>]</p></li>
-<li id="n13"><p><em>arhat</em>. C. <span class="ch">阿羅訶</span> (EMC <em>•a-la-ha</em> = G. <em>araha</em>), P. <em>arahant</em>, S. <em>arhat</em>. The title S. <em>arhat</em> lit. meant “worthy, venerable, deserving [of alms],” and was sometimes interpreted as “unattached one” in C. translations. It was a title used by Indian ascetics (Buddhists and Jains) to mean a person fully liberated in this life, and it was one of the most common titles given to the Buddha (along with Bhagavān, Tathāgata, and Sugata). Here, it was used to refer to a fully liberated disciple who was destined for <em>parinirvāṇa</em>. I’ve left the term untranslated as a title of special religious significance. [<a href="#ref13">back</a>]</p></li>
+<li id="n13"><p><em>arhat</em>. C. <span class="ch">阿羅訶</span> (EMC. <em>•a-la-ha</em> = G. <em>araha</em>), P. <em>arahant</em>, S. <em>arhat</em>. The title S. <em>arhat</em> lit. meant “worthy, venerable, deserving [of alms],” and was sometimes interpreted as “unattached one” in C. translations. It was a title used by Indian ascetics (Buddhists and Jains) to mean a person fully liberated in this life, and it was one of the most common titles given to the Buddha (along with Bhagavān, Tathāgata, and Sugata). Here, it was used to refer to a fully liberated disciple who was destined for <em>parinirvāṇa</em>. I’ve left the term untranslated as a title of special religious significance. [<a href="#ref13">back</a>]</p></li>
 </ol>
 <hr/>
 
