--- a/01_agama/madhyama/MA_056.md
+++ b/01_agama/madhyama/MA_056.md
@@ -74,7 +74,7 @@ The Bhagavān told him, “Meghiya, your mind’s liberation isn’t complete ye
 “Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely contemplate the foul discharges to end desire. He’ll cultivate kindness to end anger. He’ll be mindful of breathing in and out to end confused thoughts. He’ll cultivate the notion of impermanence to end self-pride.
 
 
-“Meghiya, if a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. Meghiya, if a monk gets the notion of selflessness, then he’ll end all self-pride. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and Nirvāṇa.”
+“Meghiya, if a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. Meghiya, if a monk gets the notion of selflessness, then he’ll end all self-pride. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and <em>nirvāṇa</em>.”
 
 
 The Buddha thus spoke. When Venerable Meghiya and the monks heard what the Buddha taught, they rejoiced and approved.
@@ -90,7 +90,7 @@ The Buddha thus spoke. When Venerable Meghiya and the monks heard what the Buddh
 5. {:#n5} <em>work toward ending the afflictions</em>. C. <span class="ch">學斷</span>, P. <em>padhāna</em>, G. <em>prahana *vinedi</em>. Lit. “train in abandoning.” What Meghiya wants to abandon is left unsaid, but the likely candidates are things like suffering or affliction. The P. parallel, as is often the case, has “exertion” (P. <em>padhāna</em>) instead of “abandoning” (G. <em>prahana</em>). [\[back\]](#ref5)
 6. {:#n6} In AN 9.3, Meghiya repeats this objection three times, rather than his initial request, which makes him appear more impolite than this version. [\[back\]](#ref6)
 1. {:#n1} <em>complete</em>. C. 熟. Lit. “matured,” “ripened,” or “cooked.” None of these usages really match this context, so I’ve used a more generic English equivalent. [\[back\]](#ref1)
-1. {:#n1} <em>a good friend, being in the company of good friends, and being united with good friends</em>. C. <span class="ch">自善知識、與善知識倶、善知識共和合</span>, P. <em>kalyāṇamitto hoti kalyāṇasahāyo kalyāṇasampavaṅko</em>. “Good friend” (<span class="ch">善知識</span>) corresponds to S. <em>kalyāṇamitra</em> (P. <em>kalyāṇamitta</em>). “In the company of” (<span class="ch">與 … 倶</span>) corresponds better with S. <em>sahāyana</em> or <em>sahāyatva</em>, which mean “companionship” or “association” respectively, than it does with S/P. <em>sahāya</em> (“a companion”). “In harmony with” (<span class="ch">共和合</span>) is also difficult to relate to P. <em>sampavaṅka</em>. <span class="ch">共和合</span> corresponds with P. <em>samagga</em> (G. <em>samagra</em>) in other parallels. To give a few examples: Aniruddha’s description of his relationship with his companions in MĀ 72/MN 128 and MĀ 185/MN 31, at the end of the summary verses of MĀ 122/AN 8.10, and Varsakāra’s questions to Ānanda in MĀ 145/MN 108.<br/>
+1. {:#n1} <em>a good friend, being in the company of good friends, and being united with good friends</em>. C. <span class="ch">自善知識、與善知識倶、善知識共和合</span>, P. <em>kalyāṇamitto hoti kalyāṇasahāyo kalyāṇasampavaṅko</em>. “Good friend” (<span class="ch">善知識</span>) corresponds to S. <em>kalyāṇamitra</em> (P. <em>kalyāṇamitta</em>). “In the company of” (<span class="ch">與 … 倶</span>) corresponds better with S. <em>sahāyana</em> or <em>sahāyatva</em>, which mean “companionship” or “association” respectively, than it does with P/S. <em>sahāya</em> (“a companion”). “In harmony with” (<span class="ch">共和合</span>) is also difficult to relate to P. <em>sampavaṅka</em>. <span class="ch">共和合</span> corresponds with P. <em>samagga</em> (G. <em>samagra</em>) in other parallels. To give a few examples: Aniruddha’s description of his relationship with his companions in MĀ 72/MN 128 and MĀ 185/MN 31, at the end of the summary verses of MĀ 122/AN 8.10, and Varsakāra’s questions to Ānanda in MĀ 145/MN 108.<br/>
 Having pointed this out, however, doesn’t invalidate the Pali reading, for we can see it mirrored in other Chinese parallels such as SĀ 12.14 (914), which appears to have the same three synonyms for “friends” that we find in Theravāda suttas. [\[back\]](#ref1)
 7. {:#n7} <em>Pratimokṣa.</em> C. <span class="ch">從解脱</span>, P. <em>pātimokkha</em>. The Chinese translator has rendered Pratimokṣa as “Conformance with (從 = prati-) Liberation (<span class="ch">解脱</span> = -mokṣa).” I’ve converted the translation back to Sanskrit for clarity. [\[back\]](#ref7)
 
