--- a/01_agama/madhyama/MA_057.md
+++ b/01_agama/madhyama/MA_057.md
@@ -47,7 +47,7 @@ next: MA_058.html
 12\. “If a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely contemplate the foul discharges to end desire. He’ll cultivate kindness to end anger. He’ll be mindful of breathing in and out to end confused thoughts. He’ll cultivate the notion of impermanence to end self-pride.
 {:#p12}
 
-13\. “If a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. If a monk gets the notion of selflessness, then he’ll end all self-pride. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and Nirvāṇa.”
+13\. “If a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. If a monk gets the notion of selflessness, then he’ll end all self-pride. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and <em>nirvāṇa</em>.”
 {:#p13}
 
 14\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
