--- a/01_agama/madhyama/MA_153.md
+++ b/01_agama/madhyama/MA_153.md
@@ -192,16 +192,16 @@ He answered, “No, Gautama. Why is that? Someone sick needs medicine, but someo
 
 #### Being Healthy and Nirvāṇa
 
-48\. “Sugandika, the Tathāgata, Arhat, and Completely Awakened One teaches: ‘Being healthy is the supreme blessing, and Nirvāṇa is the supreme happiness.’”
+48\. “Sugandika, the Tathāgata, Arhat, and Completely Awakened One teaches: ‘Being healthy is the supreme blessing, and <em>nirvāṇa</em> is the supreme happiness.’”
 {:#p48}
 
-49\. The heretic Sugandika said to the Bhagavān, “Gautama, I’ve trained for a long time in the religious practice with virtuous and senior elders. I’ve heard this from them: ‘Being healthy is the supreme blessing, and Nirvāṇa is the supreme happiness.’”
+49\. The heretic Sugandika said to the Bhagavān, “Gautama, I’ve trained for a long time in the religious practice with virtuous and senior elders. I’ve heard this from them: ‘Being healthy is the supreme blessing, and <em>nirvāṇa</em> is the supreme happiness.’”
 {:#p49}
 
-50\. The Bhagavān asked, “Sugandika, so you’ve trained for a long time in the religious practice with virtuous and senior elders, and you’ve heard this from them: ‘Being healthy is the supreme blessing, and Nirvāṇa is the supreme happiness.’ Sugandika, what is ‘being healthy,’ and what is ‘Nirvāṇa’?”
+50\. The Bhagavān asked, “Sugandika, so you’ve trained for a long time in the religious practice with virtuous and senior elders, and you’ve heard this from them: ‘Being healthy is the supreme blessing, and <em>nirvāṇa</em> is the supreme happiness.’ Sugandika, what is ‘being healthy,’ and what is ‘Nirvāṇa’?”
 {:#p50}
 
-Sugandika’s body was then an illness, a tumor, an arrow, a serpent, something impermanent, a pain, something empty, and not the soul. He rubbed it with both hands and said this: “Gautama, this is being healthy! This is Nirvāṇa!”
+Sugandika’s body was then an illness, a tumor, an arrow, a serpent, something impermanent, a pain, something empty, and not the soul. He rubbed it with both hands and said this: “Gautama, this is being healthy! This is <em>nirvāṇa</em>!”
 
 #### The Parable of the Tricked Blind Person
 
@@ -213,14 +213,14 @@ Sugandika’s body was then an illness, a tumor, an arrow, a serpent, something 
 
 Sugandika answered, “Gautama, someone who speaks in this way doesn’t really know and see it.”
 
-53\. The Bhagavān said, “In this way, Sugandika, you are a blind man without eyes. This body is an illness, a sore, an arrow, a serpent, something impermanent, a pain, something empty, and not the soul that you rub with both hands and say, ‘Gautama, this is being healthy! This is Nirvāṇa!’
+53\. The Bhagavān said, “In this way, Sugandika, you are a blind man without eyes. This body is an illness, a sore, an arrow, a serpent, something impermanent, a pain, something empty, and not the soul that you rub with both hands and say, ‘Gautama, this is being healthy! This is <em>nirvāṇa</em>!’
 {:#p53}
 
-54\. “Sugandika, you’re not even aware of being healthy, so how could you know and see Nirvāṇa? It would never be possible to call that ‘knowing and seeing.’ Sugandika, the Tathāgata, Arhat, and Completely Awakened One says:
+54\. “Sugandika, you’re not even aware of being healthy, so how could you know and see <em>nirvāṇa</em>? It would never be possible to call that ‘knowing and seeing.’ Sugandika, the Tathāgata, Arhat, and Completely Awakened One says:
 {:#p54}
 
 * {:.verse}“‘Good health is the supreme blessing,\\
-And Nirvāṇa is the supreme happiness.\\
+And <em>nirvāṇa</em> is the supreme happiness.\\
 Of all paths, it’s the noble eightfold path\\
 That stands in the safety of the immortal.’"
 
@@ -232,24 +232,24 @@ That stands in the safety of the immortal.’"
 
 #### Clarifying the Dharma Eye
 
-57\. Thereupon, the heretic Sugandika rose from his seat, bared one shoulder, and addressed the Buddha with his palms together, “Gautama, I now have the utmost belief in the ascetic Gautama! Please, Gautama, teach the Dharma well! Make me able to understand: ‘This is being heathy. This is Nirvāṇa.’”
+57\. Thereupon, the heretic Sugandika rose from his seat, bared one shoulder, and addressed the Buddha with his palms together, “Gautama, I now have the utmost belief in the ascetic Gautama! Please, Gautama, teach the Dharma well! Make me able to understand: ‘This is being heathy. This is <em>nirvāṇa</em>.’”
 {:#p57}
 
-58\. The Bhagavān said, “Sugandika, if your noble wisdom eye isn’t clear yet, you’ll never be able to understand my teaching about heath and Nirvāṇa, and that would be troublesome for me. Sugandika, it would be like a man born blind who causes someone else to go and say, ‘You should know, this is the color blue … yellow … red … the color white.’ Sugandika, could a man born blind cause someone else to say: ‘I know the color blue … yellow … red … color white’?”
+58\. The Bhagavān said, “Sugandika, if your noble wisdom eye isn’t clear yet, you’ll never be able to understand my teaching about heath and <em>nirvāṇa</em>, and that would be troublesome for me. Sugandika, it would be like a man born blind who causes someone else to go and say, ‘You should know, this is the color blue … yellow … red … the color white.’ Sugandika, could a man born blind cause someone else to say: ‘I know the color blue … yellow … red … color white’?”
 {:#p58}
 
 He answered, “No, Gautama.”
 
-59\. “So it is, Sugandika. If your noble wisdom eye isn’t clear yet, you’ll never be able to understand my teaching about health and Nirvāṇa, and that would be troublesome to me.
+59\. “So it is, Sugandika. If your noble wisdom eye isn’t clear yet, you’ll never be able to understand my teaching about health and <em>nirvāṇa</em>, and that would be troublesome to me.
 {:#p59}
 
-60\. “Sugandika, I’ll teach you about something that’s like a marvelous medicine, which will cause your noble wisdom eye to become clear. Sugandika, if your noble wisdom eye becomes clear, you’ll be able to understand for yourself: ‘This is good heath. This is Nirvāṇa.’ Sugandika, [you’d be] like a man born blind who has relatives who care about him. Seeking profit and gain for him and seeking his safety and happiness, they find an eye doctor, and the doctor gives him a variety of treatments. Some are purgatives, some are laxatives. Some are nasal irrigations, some are enemas. Sometimes, his veins are pierced; sometimes, they make his tears flow.
+60\. “Sugandika, I’ll teach you about something that’s like a marvelous medicine, which will cause your noble wisdom eye to become clear. Sugandika, if your noble wisdom eye becomes clear, you’ll be able to understand for yourself: ‘This is good heath. This is <em>nirvāṇa</em>.’ Sugandika, [you’d be] like a man born blind who has relatives who care about him. Seeking profit and gain for him and seeking his safety and happiness, they find an eye doctor, and the doctor gives him a variety of treatments. Some are purgatives, some are laxatives. Some are nasal irrigations, some are enemas. Sometimes, his veins are pierced; sometimes, they make his tears flow.
 {:#p60}
 
 61\. “Sugandika, this being the case, both his eyes become clear. Sugandika, if both his eyes become clear, then he can see for himself, ‘This is the color blue … yellow … red … the color white.’ He can also see, ‘Those clothes are filthy and impure.’ Then he thinks, ‘That deceiver was not my friend who fooled me with these filthy clothes for so long.’ Then he has a thought of hatred for that deceiver. Sugandika, perhaps the person then kills that deceiver.
 {:#p61}
 
-62\. “In this way, Sugandika, I will teach you something that’s like a marvelous medicine, which will cause your noble wisdom eye to become clear. Sugandika, if your noble wisdom eye becomes clear, then you’ll be able to know for yourself, ‘This is good health. This is Nirvāṇa.’
+62\. “In this way, Sugandika, I will teach you something that’s like a marvelous medicine, which will cause your noble wisdom eye to become clear. Sugandika, if your noble wisdom eye becomes clear, then you’ll be able to know for yourself, ‘This is good health. This is <em>nirvāṇa</em>.’
 {:#p62}
 
 63\. “Sugandika, there are four things that can clarify the noble wisdom eye that isn’t clear yet. What are the four? Being close to good friends, paying respects and performing duties, hearing the good Dharma and considering it well, and going from one thing to the next. Sugandika, you should thus train: Be close to good friends, pay respects and perform duties, hear the good Dharma and consider it well, and go from one thing to the next. Sugandika, you should train in this way.
