--- a/01_agama/madhyama/MA_210.md
+++ b/01_agama/madhyama/MA_210.md
@@ -232,14 +232,14 @@ Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” A
 37\. Again, she asked, “Noble one, what is the counterpart to insight?”
 {:#p37}
 
-The nun Dharmadinnā answered, “Nirvāṇa is the counterpart to insight.”
+The nun Dharmadinnā answered, “<em>Nirvāṇa</em> is the counterpart to insight.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
-38\. Again, she asked, “Noble one, what is the counterpart to Nirvāṇa?”
+38\. Again, she asked, “Noble one, what is the counterpart to <em>nirvāṇa</em>?”
 {:#p38}
 
-The nun Dharmadinnā answered, “Madam, you’re asking about an endless subject. Indeed, madam, you’ve asked about something that would be unending; it’s my limit. Nirvāṇa has no counterpart. Because it has no net of errors or entangling snares, Nirvāṇa is extinguishment. The Bhagavān’s practice of the religious life derives from this meaning.”
+The nun Dharmadinnā answered, “Madam, you’re asking about an endless subject. Indeed, madam, you’ve asked about something that would be unending; it’s my limit. <em>Nirvāṇa</em> has no counterpart. Because it has no net of errors or entangling snares, <em>nirvāṇa</em> is extinguishment. The Bhagavān’s practice of the religious life derives from this meaning.”
 
 39\. The laywoman Viśākhā heard what the nun Dharmadinnā had taught, and she well accepted, well remembered, and well recited it. She then rose from her seat, bowed her head reverently to the nun Dharmadinnā, circled her three times, and departed.
 {:#p39}
