--- a/01_agama/other/T102.md
+++ b/01_agama/other/T102.md
@@ -27,10 +27,10 @@ They said, “Virtuous sir, form is impermanent.”
 
 “Not so, Bhagavān.”
 
-5\. “You should know that feeling … perception … volition … consciousness that’s permanent and impermanent is likewise. All existent forms, whether past, future, or present, internal or external, crude or fine, superior or inferior, and far or near are all without self. You should know that should they are to be well contemplated with right knowledge. Thus, feeling … perception … volition … consciousnesses that exists, whether future, past, or present … should all be contemplated with right knowledge as before.
+5\. “You should know that feeling … perception … volition … consciousness that’s permanent and impermanent is likewise. All existent forms, whether past, future, or present, internal or external, crude or fine, superior or inferior, and far or near are all without self. You should know that they are to be well contemplated with right knowledge. Thus, feeling … perception … volition … consciousnesses that exists, whether future, past, or present … should all be contemplated with right knowledge as before.
 {:#p5}
 
-6\. “Suppose my auditing assembly of noble disciples contemplate these five acquired aggregates and know that they have no self or anything belonging to self. After thus contemplating them, they will know the world has nothing that’s grasped, that grasps, or that’s unchanging. They simply realize Nirvāṇa from their self-awakening: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I am not subject to a later existence.’”
+6\. “Suppose my auditing assembly of noble disciples contemplate these five acquired aggregates and know that they have no self or anything belonging to self. After thus contemplating them, they will know the world has nothing that’s grasped, that grasps, or that’s unchanging. They simply realize <em>nirvāṇa</em> from their self-awakening: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I am not subject to a later existence.’”
 {:#p6}
 
 7\. When he spoke this teaching, the minds of those five monks were liberated from the afflictions. They faithfully accepted it and approved.
