--- a/01_agama/other/T109.md
+++ b/01_agama/other/T109.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'Taisho 109: The Turning the Dharma Wheel Sutra'
+title: 'Taisho 109: The Turning the Dharma Wheel Sūtra'
 type: kramdown
 base: ../../../
 previous: T102.html
@@ -9,21 +9,21 @@ next: T110.html
 
 # [The Related Discourses](../../index.html)
 ## Alternate Translations
-#### Taisho 109: Turning the Dharma Wheel Sūtra
+#### Taisho 109: The Turning the Dharma Wheel Sūtra
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha was sitting under a tree in the Deer Preserve at Bārāṇasī. A thousand monks and many heavenly spirits were present at the time. A large congregation of them encircled him in the sky.
 {:#p1}
 
-2\. It was then that a spontaneous Dharma wheel flew up to Buddha and turned in front of him. The Buddha touched the wheel with his hand and said, “Stop! Departed am I from the countless eons of turning name-and-forms and suffering that’s measureless. Today, the mind of delusion and craving has stopped. I’ve been freed from contaminated and binding dispositions. I’ve concentrated my faculties and ended birth and death. I will cycle among the five destinies no more.” The wheel then stopped.
+2\. It was then that a spontaneous Dharma wheel flew up to the Buddha and turned in front of him. The Buddha touched the wheel with his hand and said, “Stop! Departed am I from the countless eons of turning name-and-forms and suffering that’s measureless. Today, the mind of delusion and craving has stopped. I’ve been freed from contaminated and binding dispositions. I’ve concentrated my faculties and ended birth and death. I will cycle among the five destinies no more.” The wheel then stopped.
 {:#p2}
 
 3\. The Buddha then addressed the monks, “The world has two things that fall into extreme practices when done by religious disciples who renounce the home life, and such people should never accompany those who follow those [two] things.
 {:#p3}
 
-4\. “What are the two? One is thinking about cravings without pure mindfulness. Second is attachment to personal preferences and not being able to make effort. For this reason, they retreat into extreme practices and don’t become noble people of the Buddha’s path. If these monks don’t think about cravings or attach to personal preferences, then it’s possible for them to accept the middle [way]. The Tathāgata’s supreme and right awakening that attained vision and wisdom was free from both extremes and resulted in his Nirvāṇa.
+4\. “What are the two? One is thinking about cravings without pure mindfulness. Second is attachment to personal preferences and not being able to make effort. For this reason, they retreat into extreme practices and don’t become noble people of the Buddha’s path. If these monks don’t think about cravings or attach to personal preferences, then it’s possible for them to accept the middle [way]. The Tathāgata’s supreme and right awakening that attained vision and wisdom was free from both extremes and resulted in his <em>nirvāṇa</em>.
 {:#p4}
 
-5\. “What is called accepting the middle [way]? It means accepting the correct eightfold path, which is 1. right view, 2. right intention, 3. right speech, 4. right action, 5. right livelihood, 6. right control, 7. right mindfulness,  and 8. right concentration.
+5\. “What is called accepting the middle [way]? It means accepting the correct eightfold path, which is 1. right view, 2. right intention, 3. right speech, 4. right action, 5. right livelihood, 6. right control, 7. right mindfulness,  and 8. right <em>samādhi</em>.
 {:#p5}
 
 6\. “If monks hear the path from beginning to end, they should already know the truth about suffering. Once they are single-minded, they accept it with vision, accept it with meditation, and accept it by wise observation. They will realize it by thinking about it, which will cause their minds to be liberated. They should know the truth of ending suffering’s accumulation. Having accepted it with vision, meditation, and wise observation, they will realize it by thinking about it, which will cause their minds to be liberated. The truth of [suffering’s] end is thus.
