--- a/01_agama/other/T110.md
+++ b/01_agama/other/T110.md
@@ -60,7 +60,7 @@ He replied, “I understood it, Sugata.”
 15\. It was because Kauṇḍinya understood that teaching that he was thenceforth called Ajñāta Kauṇḍinya (Ajñāta meaning “Understood”).
 {:#p15}
 
-16\. Just then, the earth-dwelling yakṣas who heard the Buddha’s discourse raised a great cry, addressing humans and gods, “Gentlemen, you should know, the Buddha is staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī, and he has explained in detail the three turnings and 12 aspects of the Dharma wheel. Because of this, he is able for gods, humans, Māra, Brahmā, ascetics, priests, and the whole world to make a great benefit, leading them to be equal to the religious life and swiftly reach the place of well-being and Nirvāṇa. The gods will flourish and the asuras will diminish!”
+16\. Just then, the earth-dwelling yakṣas who heard the Buddha’s discourse raised a great cry, addressing humans and gods, “Gentlemen, you should know, the Buddha is staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī, and he has explained in detail the three turnings and 12 aspects of the Dharma wheel. Because of this, he is able for gods, humans, Māra, Brahmā, ascetics, priests, and the whole world to make a great benefit, leading them to be equal to the religious life and swiftly reach the place of well-being and <em>nirvāṇa</em>. The gods will flourish and the asuras will diminish!”
 {:#p16}
 
 17\. From that address made by the yakṣas, the sky gods in the host of the four god kings all heard and understood it. Thus, they instantly passed it on to all six of the desire heavens. In the span of an instant, the call reached the Brahma heavens, where its echo was heard by all. After the host of Brahma heard it, then they again addressed everyone, explaining in detail as before. For this reason, this sūtra is named the “Three Turnings of the Dharma Wheel.”
