--- a/01_agama/samyukta/01/SA1_145.md
+++ b/01_agama/samyukta/01/SA1_145.md
@@ -51,7 +51,7 @@ next: SA1_146.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.7c7'>「比丘，多聞聖弟子於此五受陰非我、非我所，如實觀察。 如實觀察已，於諸世間都無所取。 無所取故，無所著。 無所著故，自覺涅槃： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
-    <td id='p7'>7. “Monks, a well-versed noble disciple truly observes that what’s in these five acquired aggregates is not self and doesn’t belong to self. Having truly observed this, they take hold of nothing from all the world. Because they take hold of nothing, they have no attachments. Because they have no attachments, they realize Nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+    <td id='p7'>7. “Monks, a well-versed noble disciple truly observes that what’s in these five acquired aggregates is not self and doesn’t belong to self. Having truly observed this, they take hold of nothing from all the world. Because they take hold of nothing, they have no attachments. Because they have no attachments, they realize <em>nirvāṇa</em> for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.7c11'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
