--- a/01_agama/samyukta/01/SA1_178.md
+++ b/01_agama/samyukta/01/SA1_178.md
@@ -412,7 +412,7 @@ When I compare this list of seven shrines here in SĀ 1.178 to these parallels, 
 <em>Dhuranikṣepana</em>. C. 捨重擔支提 (EMC. “discarded heavy burden” + tʃɪĕ-dei = BHS. <em>dhuranikṣepana cedi[ya]</em>) P. ?, S. <em>dhuranikṣepana caitya</em>. Analayo reconstructs this shrine’s name as P. <em>dhurānikkhepana</em> based on a parallel found in a S. fragment that names a shrine S. <em>dhurānikṣepaṇa</em>. However, P. <em>dhur<strong>ā</strong>nikkhepana</em> presumably represents the compound S. <em>dhura-anikkhepana</em>, which would mean “heavy burden not set down.” The <cite>Divyāvadāna</cite> parallel has instead S. <em>dhuranikṣepana</em>, which makes better sense.<br/>
 <em>Mallamakuṭa Shrine.</em> C. 力士寶冠支提 (EMC. “precious crest of warriors” +  tʃɪĕ-dei = BHS. <em>mallamakuṭa cedi[ya]</em>), S. <em>mallānāṃ makuṭabandhana caitya</em>. The <cite>Divyāvadāna</cite> parallel for this shrine’s name makes it clear that 力士 (“strong man”) is a translation of S. <em>malla</em>. 寶冠 would render S. <em>makuṭa</em> well enough. Rotman (<cite>Divine Stories</cite>, Vol. I, p.337) translates the S. as “Tying a Crest Shrine of the Mallas,” but the C. lacks a verb like S. <em>bandhana</em>, so we can dispense with the awkward “tying.” [<a href="#ref18">back</a>]</li>
 <li id="n19"><em>Vedic scriptures</em>. C. 闈陀經典. The translit. 闈陀 (EMC. ɦɪuəi-da = Pr. <em>veda</em>) presumably means the Vedas of Brahmanism. The whole expression 闈陀經典 probably corresponds to S. <em>vedavacana</em>.<br/>
-<em>Sāvitrī.</em> C. 婆毘諦 (EMC. bua-bii-tei = Pr. <em>bhavite</em>?). A tempting alternate reading is 娑毘諦 (EMC sa-bii-tei), which could yield Pr. <em>saviti</em>, which would likely correspond to S. <em>sāvitrī</em>. This was a hymn taken from the <cite>Ṛgveda</cite> that’s attested to have been recited frequently by Brahmins. [<a href="#ref19">back</a>]</li>
+<em>Sāvitrī.</em> C. 婆毘諦 (EMC. bua-bii-tei = Pr. <em>bhavite</em>?). A tempting alternate reading is 娑毘諦 (EMC. sa-bii-tei), which could yield Pr. <em>saviti</em>, which would likely correspond to S. <em>sāvitrī</em>. This was a hymn taken from the <cite>Ṛgveda</cite> that’s attested to have been recited frequently by Brahmins. [<a href="#ref19">back</a>]</li>
 <li id="n20">This is one of the few cases of an Āgama <em>sūtra</em> that lacks the standard intro or outro that signals the beginning and ending of a text. In some cases, it seems to be the result of texts being composed in a later era than the rest of the compilation, being set in a time after the Buddha’s <em>parinirvāṇa</em>. That’s not the case here, but I do wonder if the pattern still applies and this straying from the format of the old oral tradition signals that this is a later composition. [<a href="#ref20">back</a>]</li>
 <li id="n21"><em>Pāṭala’s ten questions</em>. C. 彼多羅十問. This <em>sūtra</em> is missing from SĀ. The Taisho editors considered it a lost parallel to <a href="https://suttacentral.net/sn42.13" target="_blank">SN 42.13</a> and <a href="https://suttacentral.net/ma20" target="_blank">MĀ 20</a>. If so, then pɪĕ-ta-la (彼多羅) would translit. Pr. <em>patala</em> (G. <em>padala</em>?, S. <em>pāṭala</em>?), which would presumably be equiv. to P. <em>pāṭaliya</em>.<br/>
 <em>Kṣema</em>. C. 差摩 (EMC. ṭṣ‘ïĕ-mua = G/S. <em>kṣema</em>).<br/>
