--- a/01_agama/samyukta/01/SA1_32.md
+++ b/01_agama/samyukta/01/SA1_32.md
@@ -23,7 +23,7 @@ next: SA1_33.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c12'>佛告比丘： 「善哉，善哉！汝今欲知如來所說法師義耶？」</td>
-    <td id='p3'>3. The Buddha asked that monk, “Good, good! Do you want now to know about the meaning of what the Tathagāta says is a ‘Dharma teacher’?”</td>
+    <td id='p3'>3. The Buddha asked that monk, “Good, good! Do you want now to know about the meaning of what the Tathāgata says is a ‘Dharma teacher’?”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c13'>比丘白佛： 「唯然，世尊。」</td>
