--- a/01_agama/samyukta/01/SA1_53.md
+++ b/01_agama/samyukta/01/SA1_53.md
@@ -51,7 +51,7 @@ next: SA1_54.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.70c25'>「諸比丘！云何修無常想，修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明？若比丘於空露地、若林樹間，善正思惟，觀察色無常，受、想、行、識無常。如是思惟，斷一切欲愛、色愛、無色愛、掉、慢、無明。所以者何？無常想者，能建立無我想，聖弟子住無我想，心離我慢，順得涅槃。」</td>
-    <td id='p10'>10. “Monks, how does cultivating the concept of impermanence and cultivating it often stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance? Suppose a monk sits in an open area or among the trees of a grove, and he skillfully and properly contemplates. He observes the impermanence of form, the impermanence of feeling … conception … volition … consciousness. Contemplating in this way, he stops all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance. Why is that? The concept of impermanence establishes the concept of selflessness. When a noble disciple abides in the concept of selflessness, their mind becomes free of self pride, which leads to attainment of Nirvāṇa.”</td>
+    <td id='p10'>10. “Monks, how does cultivating the concept of impermanence and cultivating it often stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance? Suppose a monk sits in an open area or among the trees of a grove, and he skillfully and properly contemplates. He observes the impermanence of form, the impermanence of feeling … conception … volition … consciousness. Contemplating in this way, he stops all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance. Why is that? The concept of impermanence establishes the concept of selflessness. When a noble disciple abides in the concept of selflessness, their mind becomes free of self pride, which leads to attainment of <em>nirvāṇa</em>.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.71a2'>佛說是經已，時，諸比丘聞佛所說，歡喜奉行。</td>
