--- a/01_agama/samyukta/02/SA2_221.md
+++ b/01_agama/samyukta/02/SA2_221.md
@@ -243,7 +243,7 @@ There are a few other irregularities that take place: Nanda’s restatement of t
 These examples of instability in the C. translation probably don’t reflect the exact wording of the original. Usu. the initial trans. of standardized passages is the most complete and accurate one, and then repetitions become abbrev. or paraphrased in C. Āgama translations (the <cite>Madhyama Āgama</cite> being the conspicuous exception to this pattern). It’s unclear how much the translators, editors, and/or later copyists were responsible for this, but it appears to be a feature of translations from the era. [\[back\]](#ref6)
 7. {:#n7} <em>Would that speaker be explaining it correctly?</em> C. 作是說者，為等說不？, P. <em>sammā nu kho so, bhaginiyo, vadamāno vadeyyā”ti?</em>, T1442: 如是說時，可說此人為實語不？ The expression 等說 lit. means “equally” or “fully speaking,” which likely translated G. <em>sama vadadi</em>. However, the P. equiv. is <em>sammā … vadeyyā</em> (“correctly … speaking”), and T1442 reads 實語 (“truly speaking”). So, I assume that this is another case of confusion between G. <em>sama</em> (“equal”) and <em>saṃma</em> (“correct”). I’ve amended the passage to read 正說 instead of 等說 in my translation. [\[back\]](#ref7)
 8. {:#n8} <em>Basket Serpents Sūtra.</em> Presumably this refers to SĀ 2.212 (1172). Briefly, the parable involves a chest of four dangerous vipers, five sword-wielding enemies, six bandits, an empty village, a village with bandits, a raging torrent, a river, being afraid on the near shore, and being refreshed and happy on the other shore.<br/>
-The chest represents a person’s body of crude form, the four vipers represent the four basic elements, the five enemies represent the five acquired aggregates, and the six bandits represent the six delightful cravings. The empty village represents the six inner sense fields, and the bandits in the village represent the six outer sense fields. The raging torrent represents the four floods, and the river represents the three cravings for existence. The near shore represents being embodied, and the far shore represents Nirvāṇa.<br/>
+The chest represents a person’s body of crude form, the four vipers represent the four basic elements, the five enemies represent the five acquired aggregates, and the six bandits represent the six delightful cravings. The empty village represents the six inner sense fields, and the bandits in the village represent the six outer sense fields. The raging torrent represents the four floods, and the river represents the three cravings for existence. The near shore represents being embodied, and the far shore represents <em>nirvāṇa</em>.<br/>
 It’s not clear what part of this parable we are to apply to the present passage. The next paragraph supplies its interpretation without the need for this other <em>sūtra</em>. [\[back\]](#ref8)
 
 ---
