--- a/01_agama/samyukta/04/SA4_55.md
+++ b/01_agama/samyukta/04/SA4_55.md
@@ -22,10 +22,10 @@ next: ../05/index.html
 
 The monks said to the Buddha, “Bhagavān, the leaves in your hand are few, but the leaves in this great forest are measureless. Hundreds of thousands of millions of times more. Their number can’t be likened to any analogy.”
 
-4\. “So it is, monks. The things seen by me after I achieved the complete and correct awakening and that I definitely explain for people are like the leaves in my hand. Why is that? Those teachings are beneficial to the aim, beneficial to the teaching, beneficial to the religious life and to insight, wisdom, correct awakening, and the way to Nirvāṇa.
+4\. “So it is, monks. The things seen by me after I achieved the complete and correct awakening and that I definitely explain for people are like the leaves in my hand. Why is that? Those teachings are beneficial to the aim, beneficial to the teaching, beneficial to the religious life and to insight, wisdom, correct awakening, and the way to <em>nirvāṇa</em>.
 {:#p4}
 
-5\. “The correct teaching that I know but don’t teach is like the leaves of this great forest and like my achievement of complete awakening. Why is that? Those teachings are not beneficial to the aim, not beneficial to the teaching, not beneficial to the religious life, nor to insight, wisdom, correct awakening, and the correct way to Nirvāṇa. Therefore, monks, those who have yet to directly realize the four noble truths should apply themselves to the method, arouse increasing motivation, and train for that direct realization.”
+5\. “The correct teaching that I know but don’t teach is like the leaves of this great forest and like my achievement of complete awakening. Why is that? Those teachings are not beneficial to the aim, not beneficial to the teaching, not beneficial to the religious life, nor to insight, wisdom, correct awakening, and the correct way to <em>nirvāṇa</em>. Therefore, monks, those who have yet to directly realize the four noble truths should apply themselves to the method, arouse increasing motivation, and train for that direct realization.”
 {:#p5}
 
 6\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
