--- a/01_agama/samyukta2/SA2_180.md
+++ b/01_agama/samyukta2/SA2_180.md
@@ -36,7 +36,7 @@ The Buddha said, “I really did.”
 {:#p7}
 
 * {:.verse}“In the past, I’ve seen\\
-This priest’s Nirvāṇa.\\
+This priest’s <em>nirvāṇa</em>.\\
 Long has he renounced hate and fear,\\
 Able to cross over craving for the world.”
 
