--- a/01_agama/samyukta2/SA2_46.md
+++ b/01_agama/samyukta2/SA2_46.md
@@ -39,7 +39,7 @@ As well as the fifteenth day of the month\\
 And the months of miracles,\\
 They keep the pure precepts.\\
 These people will obtain birth in heaven\\
-With virtues like myself.’
+With virtues like myself.’”
 
 9\. The Buddha addressed the monks, “What Lord Śakra said is not called well spoken. Why is that? If an arhat ends the contaminants and accomplishes the task, they should say these verses:
 {:#p9}
