--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -24,7 +24,7 @@ next: DA_11.html
 
 The monks accepted his instructions and listened.
 
-5\. Śāriputra told the monks, “There are teachings that go up to ten which remove the manifold bonds, reach Nirvāṇa, and completely end suffering.[\[3\]](#n3){:#ref3} They also perfect 550 things. Now, I will discern them. All of you, listen well!
+5\. Śāriputra told the monks, “There are teachings that go up to ten which remove the manifold bonds, reach <em>nirvāṇa</em>, and completely end suffering.[\[3\]](#n3){:#ref3} They also perfect 550 things. Now, I will discern them. All of you, listen well!
 {:#p5}
 
 #### The Ones
@@ -124,7 +124,7 @@ The monks accepted his instructions and listened.
 34\. “There are also five things to be achieved, five things to be cultivated, five things to be recognized, five things to be ceased, five things that retreat, five things that advance, five things that are difficult to understand, five things to produce, five things to know, and five things to be realized.
 {:#p34}
 
-35\. “What are five things to be achieved? The five factors of complete cessation: First is faith in the Buddha, Tathāgata, and Arhat who perfected the ten epithets. Second is having no illness and being at peace. Third is being honest and not deceptive about heading straight down the Tathāgata’s road to Nirvāṇa. Fourth is mental focus that’s not confused and doesn’t forget the recitations. Fifth is skill in investigating the arising and cessation of things and ending the root of suffering with the noble practice.
+35\. “What are five things to be achieved? The five factors of complete cessation: First is faith in the Buddha, Tathāgata, and Arhat who perfected the ten epithets. Second is having no illness and being at peace. Third is being honest and not deceptive about heading straight down the Tathāgata’s road to <em>nirvāṇa</em>. Fourth is mental focus that’s not confused and doesn’t forget the recitations. Fifth is skill in investigating the arising and cessation of things and ending the root of suffering with the noble practice.
 {:#p35}
 
 36\. “What are five things to be cultivated? The five faculties: the faculty of faith, faculty of effort, faculty of mindfulness, faculty of samādhi, and faculty of wisdom.
@@ -499,7 +499,7 @@ The monks accepted his instructions and listened.
 5. {:#n5}*Contemplation of the foul discharges*. C. 惡露觀. This is synonymous with the contemplation of foulness (P. asubha bhāvana) according to a passage in the *Dharmaguptaka Vinaya* (T1428.582a4-6). [\[back\]](#ref5)
 6. {:#n6}*central country*. I.e., a civilized region rather than a frontier region that’s barbaric. The conditions in lawless regions in the ancient world was not conducive to practicing. In India, a central country would be places like Śrāvastī and Magadha. [\[back\]](#ref6)
 7. {:#n7}This list differs from that found in Theravāda and Sarvāstivāda parallels. There is a lengthy commentary on this version of the seven concepts found in the *Śāriputra Abhidharma* (cf. T1548.638b9ff). [\[back\]](#ref7)
-8. {:#n8}*Changes to the senses*. C. 除入, P. abhibhāyatanāni, S. abhibhvāyatanāni. On the face of it, the Chinese appears to mean “eliminated” or “removed,” as these are the most common readings for 除. In Pali and Sanskrit sources, the term is interpreted as P. abhibhā, or “mastery,” and this is confirmed by later Chinese translations of Sanskrit Abhidharma. Interestingly, an equivalent reading (除處) is found in MĀ 215 (T26.799c25) for these eight perceptions. However, the *Śāriputra Abhidharma* (cf. 1548.642a19ff.) calls the list 勝入 (“overcoming the senses”), so both readings existed in translations of pre-Sanskrit texts. Given this situation, it’s important to note that 除 has less frequent readings in classical Chinese as “to govern, fix, correct” and “to change, turn over (e.g., a new year).” They may be closer to the intended meaning in these older translations than the usual readings. I’ve translated the term accordingly. [\[back\]](#ref8)
+8. {:#n8}*Changes to the senses*. C. 除入, P. abhibhāyatanāni, S. abhibhvāyatanāni. On the face of it, the Chinese appears to mean “eliminated” or “removed,” as these are the most common readings for 除. In Pali and Sanskrit sources, the term is interpreted as P. abhibhā, or “mastery,” and this is confirmed by later Chinese translations of Sanskrit Abhidharma. Interestingly, an equivalent reading (除處) is found in MĀ 215 (T26.799c25) for these eight perceptions. However, the *Śāriputra Abhidharma* (cf. T1548.642a19ff.) calls the list 勝入 (“overcoming the senses”), so both readings existed in translations of pre-Sanskrit texts. Given this situation, it’s important to note that 除 has less frequent readings in classical Chinese as “to govern, fix, correct” and “to change, turn over (e.g., a new year).” They may be closer to the intended meaning in these older translations than the usual readings. I’ve translated the term accordingly. [\[back\]](#ref8)
 9. {:#n9}The *Śāriputra Abhidharma* (T1548.639b16ff.) describes the oppressive fear that arises when one’s death is imminent to explain the concept of the pain of impermanence. Thus, it’s the unpleasant feelings one has when facing one’s mortality. [\[back\]](#ref9)
 10. {:#n10}The *Śāriputra Abhidharma* (T1548.639c2ff.) describes the lack of tranquility and right liberation that results from supposing that the awareness, body, and external things are oneself or belong to oneself. [\[back\]](#ref10)
 11. {:#n11}This list occurs in the *Śāriputra Abhidharma* (T1548.654c27) without elaboration. I’ve corrected the reading of the first item by adopting an alternate reading that agrees with the Abhidharma passage and deleted the repetition at the end. It would appear that a well-meaning editor didn’t understand that the items were being counted rather than the statements and revised the list to create a ninth statement. [\[back\]](#ref11)
