--- a/01_agama/dirgha/DA_12.md
+++ b/01_agama/dirgha/DA_12.md
@@ -18,7 +18,7 @@ next: DA_13.html
 
 The monks then accepted the teaching and listened.
 
-3\. The Buddha addressed the monks, “These three categories are one thing that leads to bad destinies, one thing that leads to good destinies, and one thing that leads to Nirvāṇa.
+3\. The Buddha addressed the monks, “These three categories are one thing that leads to bad destinies, one thing that leads to good destinies, and one thing that leads to <em>nirvāṇa</em>.
 {:#p3}
 
 4\. “What’s one thing that leads to bad destinies? It’s the absence of kindness that harbors harmful thoughts. This is one thing that leads to bad destinies.
@@ -27,10 +27,10 @@ The monks then accepted the teaching and listened.
 5\. “What’s one thing that leads to good destinies? It’s not inflicting bad intent on sentient beings. This is one thing that leads to good destinies.
 {:#p5}
 
-6\. “What’s one thing that leads to Nirvāṇa? It’s making effort to cultivate the abodes of mindfulness. This is one thing that leads to Nirvāṇa.
+6\. “What’s one thing that leads to <em>nirvāṇa</em>? It’s making effort to cultivate the abodes of mindfulness. This is one thing that leads to <em>nirvāṇa</em>.
 {:#p6}
 
-7\. “Again, there are two things that lead to bad destinies, two things that lead to good destinies, and two things that lead to Nirvāṇa.
+7\. “Again, there are two things that lead to bad destinies, two things that lead to good destinies, and two things that lead to <em>nirvāṇa</em>.
 {:#p7}
 
 8\. “What are two things that lead to bad destinies? One is violating the precepts, and the second is breaking [right] view.
@@ -39,10 +39,10 @@ The monks then accepted the teaching and listened.
 9\. “What are two things that lead to good destinies? One is perfecting the precepts, and the second is perfecting [right] view.
 {:#p9}
 
-10\. “What are the two things that lead to Nirvāṇa? One is calmness, and the second in contemplation.
+10\. “What are the two things that lead to <em>nirvāṇa</em>? One is calmness, and the second in contemplation.
 {:#p10}
 
-11\. “Again, there are three things that lead to bad destinies, three things that lead to good destinies, and three things that lead to Nirvāṇa.
+11\. “Again, there are three things that lead to bad destinies, three things that lead to good destinies, and three things that lead to <em>nirvāṇa</em>.
 {:#p11}
 
 12\. “What are three things that lead to bad destinies? They are the three unskillful roots: The unskillful root of greed, unskillful root of anger, and unskillful root of delusion.
@@ -51,10 +51,10 @@ The monks then accepted the teaching and listened.
 13\. “What are three things that lead to good destinies? They are the three skillful roots: The skillful root of having no greed, skillful root of having no anger, and skillful root of having no delusion.
 {:#p13}
 
-14\. “What are three things that lead to Nirvāṇa? They are the three samādhis: The samādhi of emptiness, the samādhi of no appearances, and the samādhi of no action.
+14\. “What are three things that lead to <em>nirvāṇa</em>? They are the three samādhis: The samādhi of emptiness, the samādhi of no appearances, and the samādhi of no action.
 {:#p14}
 
-15\. “Again, there are four things that lead to bad destinies, four things that lead to good destinies, and four things that lead to Nirvāṇa.
+15\. “Again, there are four things that lead to bad destinies, four things that lead to good destinies, and four things that lead to <em>nirvāṇa</em>.
 {:#p15}
 
 16\. “What are four things that lead to bad destinies? They are lustful speech, angry speech, fearful speech, and deluded speech.
@@ -63,10 +63,10 @@ The monks then accepted the teaching and listened.
 17\. “What are four things that lead to good destinies? Speech without lust, speech without anger, speech without fear, and speech without delusion.
 {:#p17}
 
-18\. “What are four things that lead to Nirvāṇa? The mindful abode of body, mindful abode of feelings, mindful abode of mind, and mindful abode of teachings.
+18\. “What are four things that lead to <em>nirvāṇa</em>? The mindful abode of body, mindful abode of feelings, mindful abode of mind, and mindful abode of teachings.
 {:#p18}
 
-19\. “Again, there are five things that lead to bad destinies, five things that lead to good destinies, and five things that lead to Nirvāṇa.
+19\. “Again, there are five things that lead to bad destinies, five things that lead to good destinies, and five things that lead to <em>nirvāṇa</em>.
 {:#p19}
 
 20\. “What are five things that lead to bad destinies? They are breaking the five precepts: killing, stealing, adultery, lying, and drinking alcohol.
@@ -75,10 +75,10 @@ The monks then accepted the teaching and listened.
 21\. “What are five things that lead to good destinies? They are observing the five precepts: Not killing, not stealing, not committing adultery, not being deceptive, and not drinking alcohol.
 {:#p21}
 
-22\. “What are five things that lead to Nirvāṇa? They are the five faculties: the faculty of faith, faculty of effort, faculty of mindfulness, faculty of samādhi, and faculty of wisdom.
+22\. “What are five things that lead to <em>nirvāṇa</em>? They are the five faculties: the faculty of faith, faculty of effort, faculty of mindfulness, faculty of samādhi, and faculty of wisdom.
 {:#p22}
 
-23\. “Again, there are six things that lead to bad destinies, six things that lead to good destinies, and six things that lead to Nirvāṇa.
+23\. “Again, there are six things that lead to bad destinies, six things that lead to good destinies, and six things that lead to <em>nirvāṇa</em>.
 {:#p23}
 
 24\. “What are six things that lead to bad destinies? They are the six disrespects: Disrespecting the Buddha, disrespecting the Dharma, disrespecting the Saṅgha, disrespecting the precepts, disrespecting samādhi, and disrespecting father and mother.
@@ -87,10 +87,10 @@ The monks then accepted the teaching and listened.
 25\. “What are six things that lead to good destinies? They are the six respects: Respecting the Buddha, respecting the Dharma, respecting the Saṅgha, respecting the precepts, respecting samādhi, and respecting father and mother.
 {:#p25}
 
-26\. “What are six things that lead to Nirvāṇa? They are the six recollections: Recollecting the Buddha, recollecting the Dharma, recollecting the Saṅgha, recollecting generosity, and recollecting the gods.
+26\. “What are six things that lead to <em>nirvāṇa</em>? They are the six recollections: Recollecting the Buddha, recollecting the Dharma, recollecting the Saṅgha, recollecting generosity, and recollecting the gods.
 {:#p26}
 
-27\. “Again, there are seven things that lead to bad destinies, seven things that lead to good destinies, and seven things that lead to Nirvāṇa.
+27\. “Again, there are seven things that lead to bad destinies, seven things that lead to good destinies, and seven things that lead to <em>nirvāṇa</em>.
 {:#p27}
 
 28\. “What are seven things that lead to bad destinies? They are killing beings, taking what’s not given, adultery, lying, divisiveness, harsh speech, and flattery.
@@ -99,10 +99,10 @@ The monks then accepted the teaching and listened.
 29\. “What are seven things that lead to good destinies? Not killing beings, not stealing, not committing adultery, not being deceptive, not being divisive, not speaking harshly, and not flattering.
 {:#p29}
 
-30\. “What are seven things that lead to Nirvāṇa? They are the seven awakenings: The awakening of mindfulness, awakening of discriminating teachings, awakening of effort, awakening of mildness, awakening of samādhi, awakening of joy, and awakening of equanimity.
+30\. “What are seven things that lead to <em>nirvāṇa</em>? They are the seven awakenings: The awakening of mindfulness, awakening of discriminating teachings, awakening of effort, awakening of mildness, awakening of samādhi, awakening of joy, and awakening of equanimity.
 {:#p30}
 
-31\. “Again, there are eight things that lead to bad destinies, eight things that lead to good destinies, and eight things that lead to Nirvāṇa.
+31\. “Again, there are eight things that lead to bad destinies, eight things that lead to good destinies, and eight things that lead to <em>nirvāṇa</em>.
 {:#p31}
 
 32\. “What are eight things that lead to bad destinies? They are the eight wrong practices: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong samādhi.
@@ -111,10 +111,10 @@ The monks then accepted the teaching and listened.
 33\. “What are eight things that lead to good destinies? They are the mundane right practices: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
 {:#p33}
 
-34\. “What are eight things that lead to Nirvāṇa? They are the noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
+34\. “What are eight things that lead to <em>nirvāṇa</em>? They are the noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
 {:#p34}
 
-35\. “Again, there are nine things that lead to bad destinies, nine things that lead to good destinies, and nine things that lead to Nirvāṇa.
+35\. “Again, there are nine things that lead to bad destinies, nine things that lead to good destinies, and nine things that lead to <em>nirvāṇa</em>.
 {:#p35}
 
 36\. “What are nine things that lead to bad destinies? ‘Someone has harassed me, is harassing me, and will harass me.’ ‘My loved ones have been harassed, are being harassed, and will be harassed.’ ‘My enemies have been respected, are being respected, and will be respected.’
@@ -123,10 +123,10 @@ The monks then accepted the teaching and listened.
 37\. “What are nine things that lead to good destinies? ‘What good is there to my being troubled by others who harass me? The past won’t trouble me, the present won’t trouble me, and the future won’t trouble me.’ ‘What good is there to my being troubled about my loved ones being harassed? The past won’t trouble me, the present won’t trouble me, and the future won’t trouble me.’ ‘What good is there to my being troubled about my enemies being respected? The past won’t trouble me, the present won’t trouble me, and the future won’t trouble me.’
 {:#p37}
 
-38\. “What are nine things that lead to Nirvāṇa? They are the nine good qualities: 1) joy, 2) love, 3) delight, 4) pleasure, 5) samādhi, 6) real knowledge, 7) indifference, 8) being without desire, and 9) liberation.
+38\. “What are nine things that lead to <em>nirvāṇa</em>? They are the nine good qualities: 1) joy, 2) love, 3) delight, 4) pleasure, 5) samādhi, 6) real knowledge, 7) indifference, 8) being without desire, and 9) liberation.
 {:#p38}
 
-39\. “Again, there are ten things that lead to bad destinies, ten things that lead to good destinies, and ten things that lead to Nirvāṇa.
+39\. “Again, there are ten things that lead to bad destinies, ten things that lead to good destinies, and ten things that lead to <em>nirvāṇa</em>.
 {:#p39}
 
 40\. “What are ten things that lead to bad destinies? They are the ten unskillful [actions]: Physically killing, stealing, and committing adultery, verbally being divisive, abusive, lying, and flattering, and mentally being covetous, jealous, and having wrong views.
@@ -135,10 +135,10 @@ The monks then accepted the teaching and listened.
 41\. “What are ten things that lead to good destinies? They are the ten skillful actions: Physically not killing, stealing, or committing adultery, verbally not being divisive, abusive, lying, or flattering, and mentally not being covetous, jealous, or having wrong views.
 {:#p41}
 
-42\. “What are ten things that lead to Nirvāṇa? They are the ten straight paths: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, right samādhi, right liberation, and right knowledge.
+42\. “What are ten things that lead to <em>nirvāṇa</em>? They are the ten straight paths: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, right samādhi, right liberation, and right knowledge.
 {:#p42}
 
-43\. “Monks, thus are the ten things that make arriving at Nirvāṇa possible. This is called the sublime and correct teaching in three categories. I’m the Tathāgata; I’ve provided all that I should for you. Taking pity on you, I’ve lectured on the sutras and the path. You should also take pity on yourselves and go to a quiet place under a tree or in an empty dwelling to contemplate. Don’t be negligent. Nothing’s gained by not exerting yourselves today and regretting it later.”
+43\. “Monks, thus are the ten things that make arriving at <em>nirvāṇa</em> possible. This is called the sublime and correct teaching in three categories. I’m the Tathāgata; I’ve provided all that I should for you. Taking pity on you, I’ve lectured on the sutras and the path. You should also take pity on yourselves and go to a quiet place under a tree or in an empty dwelling to contemplate. Don’t be negligent. Nothing’s gained by not exerting yourselves today and regretting it later.”
 {:#p43}
 
 44\. The monks who heard what the Buddha taught rejoiced and approved.
