--- a/01_agama/ekottarika/10/EA_10_04.md
+++ b/01_agama/ekottarika/10/EA_10_04.md
@@ -29,7 +29,7 @@ They replied, “Yes, Bhagavān!” The monks then accepted the teaching from th
 4\. The Bhagavān told them, “A donor or almsgiver who renders services and gives offerings to diligent and learned people who observe the precepts is like someone who shows the way to the lost. They’re like someone who provides meals to those in need of food. They’re like someone who puts anxious people at ease. They’re like someone who instructs the fearful to not be afraid. They’re like someone who gives shelter to those without refuge. They’re like someone who serves as eyes for the blind or a king of medicine for the sick.
 {:#p4}
 
-5\. “They’re like a farmer cultivating their land. They remove debris and weeds so that they can harvest their crop. A monk must constantly abandon the illness of the five proliferating aggregates as he seeks to enter the city of Nirvāṇa fearlessly. Thus, monks, should a donor or almsgiver be generous when providing services and offerings to diligent and learned people who observe the precepts.”
+5\. “They’re like a farmer cultivating their land. They remove debris and weeds so that they can harvest their crop. A monk must constantly abandon the illness of the five proliferating aggregates as he seeks to enter the city of <em>nirvāṇa</em> fearlessly. Thus, monks, should a donor or almsgiver be generous when providing services and offerings to diligent and learned people who observe the precepts.”
 {:#p5}
 
 6\. The wealthy man Anāthapiṇḍada[\[1\]](#n1){:#ref1} was in the audience at the time. He then said to the Bhagavān, “So it is, Bhagavān! So it is, Tathāgata! All donors and their recipients are like auspicious vases. Those who accept their donations are like King Vaiśravaṇa. They encourage people to practice generosity like a friend or parent. A person who accepts donations will have excellent fortune in the next life. All donors and their recipients are like householders.”
