--- a/01_agama/ekottarika/14/EA_14_02.md
+++ b/01_agama/ekottarika/14/EA_14_02.md
@@ -14,7 +14,7 @@ next: EA_14_03.html
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of Nirvāṇa. What is that one thing? It’s not killing beings.”
+2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not killing beings.”
 {:#p2}
 
 3\. The Buddha told the monks, “If a person doesn’t kill beings and doesn’t think about killing, they’ll have a very long life. Why is that? Because they don’t hurt others.
