--- a/01_agama/ekottarika/14/EA_14_06.md
+++ b/01_agama/ekottarika/14/EA_14_06.md
@@ -14,7 +14,7 @@ next: EA_14_07.html
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of Nirvāṇa. What is that one thing? It’s not engaging in wrong sex.”[\[1\]](#n1){:#ref1}
+2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not engaging in wrong sex.”[\[1\]](#n1){:#ref1}
 {:#p2}
 
 3\. The Buddha told the monks, “If a person is chaste and not lustful, keeps themselves fragrant, and doesn’t have wrong notions, then they’ll receive the merits that are up in Heaven or among humans …
