--- a/01_agama/ekottarika/14/EA_14_08.md
+++ b/01_agama/ekottarika/14/EA_14_08.md
@@ -14,7 +14,7 @@ next: EA_14_09.html
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of Nirvāṇa. What is that one thing? It’s not speaking falsely.
+2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not speaking falsely.
 {:#p2}
 
 3\. The Buddha told the monks, “If a person doesn’t speak falsely, their breath will be fragrant, and their famous virtue will be heard about far away …
