--- a/01_agama/ekottarika/43/EA_43_05.md
+++ b/01_agama/ekottarika/43/EA_43_05.md
@@ -103,7 +103,7 @@ And now they will destroy your army.’
 24\. “Corrupt Māra Pāpīyān again said to me, ‘Ascetic! What do you seek here today? What is it that you want?’
 {: #p24}
 
-“I replied, ‘What I wish for is the state without sorrow or fear, the city of Nirvāṇa that’s peaceful and safe. I’ll lead these sentient beings who float in the currents of birth and death, who are submerged and blinded by suffering. I’ll guide them to the right path.’
+“I replied, ‘What I wish for is the state without sorrow or fear, the city of <em>nirvāṇa</em> that’s peaceful and safe. I’ll lead these sentient beings who float in the currents of birth and death, who are submerged and blinded by suffering. I’ll guide them to the right path.’
 
 25\. “Māra replied to me, ‘If you don’t get up from that seat right now, ascetic, then I will grab you by the legs and throw you into the ocean!’
 {: #p25}
@@ -123,7 +123,7 @@ And now they will destroy your army.’
 28\. “Māra said to me, ‘What’s your reason for destroying these conceits?’
 {: #p28}
 
-“I replied, ‘Pāpīyān, you should know, there are the concentration of kindness, concentration of compassion, concentration of joy, and concentration of equanimity and the concentration of emptiness, concentration without aspirations, and concentration without attributes. From the concentration caused by kindness, the concentration of compassion is discerned. Conditioned by the concentration of compassion, the concentration of joy is attained. Conditioned by the concentration of joy, the concentration of equanimity is attained. From the concentration of emptiness, the concentration without aspirations is attained. Because of the concentration without aspirations, the concentration without attributes is attained. Using the power of these concentrations, I will do battle with you. When their practice is complete, then suffering is ended. When suffering is ended, then the bonds are ended. When the bonds are ended, then I’ll attain Nirvāṇa.’
+“I replied, ‘Pāpīyān, you should know, there are the concentration of kindness, concentration of compassion, concentration of joy, and concentration of equanimity and the concentration of emptiness, concentration without aspirations, and concentration without attributes. From the concentration caused by kindness, the concentration of compassion is discerned. Conditioned by the concentration of compassion, the concentration of joy is attained. Conditioned by the concentration of joy, the concentration of equanimity is attained. From the concentration of emptiness, the concentration without aspirations is attained. Because of the concentration without aspirations, the concentration without attributes is attained. Using the power of these concentrations, I will do battle with you. When their practice is complete, then suffering is ended. When suffering is ended, then the bonds are ended. When the bonds are ended, then I’ll attain <em>nirvāṇa</em>.’
 
 29\. “Māra said to me, ‘Ascetic, you’ll destroy the teaching with the teaching?’
 
