--- a/01_agama/madhyama/MA_101.md
+++ b/01_agama/madhyama/MA_101.md
@@ -33,13 +33,13 @@ next: MA_106.html
 
 #### The Second Sign
 
-7\. “Furthermore, monks, he attends to a sign that’s related to what’s skillful. Suppose unskillful thoughts arise. He observes these thoughts as bad and dangerous. ‘These thoughts are not good.’ ‘These thoughts are bad.’ ‘These thoughts are bad to the wise.’ ‘If these thoughts reached fulfillment, then I won’t attain penetration, the way of awakening, nor Nirvāṇa because bad and unskillful thoughts arose.’ He thus observes what’s bad. The unskillful thoughts that arose will then cease. After bad thoughts cease, one’s mind then continuously abides in inner calm and unified thought, and they will attain <em>samādhi</em>.
+7\. “Furthermore, monks, he attends to a sign that’s related to what’s skillful. Suppose unskillful thoughts arise. He observes these thoughts as bad and dangerous. ‘These thoughts are not good.’ ‘These thoughts are bad.’ ‘These thoughts are bad to the wise.’ ‘If these thoughts reached fulfillment, then I won’t attain penetration, the way of awakening, nor <em>nirvāṇa</em> because bad and unskillful thoughts arose.’ He thus observes what’s bad. The unskillful thoughts that arose will then cease. After bad thoughts cease, one’s mind then continuously abides in inner calm and unified thought, and they will attain <em>samādhi</em>.
 {:#p7}
 
 8\. “It’s like a young man who’s good-looking, lovely, washed and bathed, and wearing bright and clean clothes puts on perfume and grooms their hair and beard. They make themselves quite pure and refreshed. Suppose a dead snake, dog, or person that’s half-eaten, bluish-colored, bloated, putrid, with filth flowing out it were tied around their neck. The foul defilement of it would be neither delightful nor pleasant.
 {:#p8}
 
-9\. “Thus, monks, he observes these thoughts as bad and dangerous. ‘These thoughts are not good.’ ‘These thoughts are bad.’ ‘These thoughts are bad to the wise.’ ‘If these thoughts reached fulfillment, then I won’t attain penetration, the way of awakening, nor Nirvāṇa because bad and unskillful thoughts arose.’ He thus observes what’s bad. The unskillful thoughts that arose then will cease. After bad thoughts cease, one’s mind then continuously abides in inner calm and unified thought, and they will attain <em>samādhi</em>.
+9\. “Thus, monks, he observes these thoughts as bad and dangerous. ‘These thoughts are not good.’ ‘These thoughts are bad.’ ‘These thoughts are bad to the wise.’ ‘If these thoughts reached fulfillment, then I won’t attain penetration, the way of awakening, nor <em>nirvāṇa</em> because bad and unskillful thoughts arose.’ He thus observes what’s bad. The unskillful thoughts that arose then will cease. After bad thoughts cease, one’s mind then continuously abides in inner calm and unified thought, and they will attain <em>samādhi</em>.
 {:#p9}
 
 10\. “If a monk wishes to attain the progressive mental states, he should frequently attend to this second sign. After attending to this sign, unskillful thoughts that arise will cease again. After bad thoughts cease, one’s mind then continuously abides in inner calm and unified thought, and they will attain <em>samādhi</em>.
