--- a/01_agama/samyukta/01/SA1_45.md
+++ b/01_agama/samyukta/01/SA1_45.md
@@ -23,11 +23,11 @@ next: SA1_46.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b12'>時，諸比丘語闡陀言：「色無常，受、想、行、識無常，一切行無常，一切法無我，涅槃寂滅。」</td>
-    <td id='p3'>3. The monks then told Chandaka, “Form is impermanent. Feeling … conception … volition … awareness is imperament. All actions are impermanent. All things are selfless. Nirvāṇa is peaceful cessation.”</td>
+    <td id='p3'>3. The monks then told Chandaka, “Form is impermanent. Feeling … conception … volition … awareness is imperament. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b14'>闡陀語諸比丘言：「我已知色無常，受、想、行、識無常，一切行無常，一切法無我，涅槃寂滅。」</td>
-    <td id='p4'>4. Candaka said to the monks, “I already know that form is impermanent, that feeling … conception … volition … awareness is imperament, that all actions are impermanent, that all things are selfless, and that Nirvāṇa is peaceful cessation.”</td>
+    <td id='p4'>4. Candaka said to the monks, “I already know that form is impermanent, that feeling … conception … volition … awareness is imperament, that all actions are impermanent, that all things are selfless, and that <em>nirvāṇa</em> is peaceful cessation.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b16'>闡陀復言：「然我不喜聞：『一切諸行空寂、不可得、愛盡、離欲、涅槃。』此中云何有我而言：『如是知、如是見，是名見法。』？」第二、第三亦如是說。</td>
@@ -47,11 +47,11 @@ next: SA1_46.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b29'>「時，諸比丘為我說法言：『色無常，受、想、行、識無常，一切行無常，一切法無我，涅槃寂滅。』</td>
-    <td id='p9'>9. “The monks then taught me the Dharma, ‘Form is impermanent. Feeling … conception … volition … awareness is imperament. All actions are impermanent. All things are selfless. Nirvāṇa is peaceful cessation.’</td>
+    <td id='p9'>9. “The monks then taught me the Dharma, ‘Form is impermanent. Feeling … conception … volition … awareness is imperament. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation.’</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b29'>我爾時語諸比丘言：『我已知色無常，受、想、行、識無常，一切行無常，一切法無我，涅槃寂滅。然我不喜聞：「一切諸行空寂、不可得、愛盡、離欲、涅槃。」此中云何有我而言：「如是知、如是見，是名見法。」？』</td>
-    <td id='p10'>10. “Then I said to the monks, ‘I already know that form is impermanent, that feeling … conception … volition … awareness is imperament, that all actions are impermanent, that all things are selfless, and that Nirvāṇa is peaceful cessation. Still, I don’t delight in hearing, “All actions are empty, at peace, and unobtainable. End craving, become free of desire, and <em>nirvāṇa</em>.’ Isn’t there a self who says, ‘Knowing and seeing in this way is called seeing the Dharma.’”’</td>
+    <td id='p10'>10. “Then I said to the monks, ‘I already know that form is impermanent, that feeling … conception … volition … awareness is imperament, that all actions are impermanent, that all things are selfless, and that <em>nirvāṇa</em> is peaceful cessation. Still, I don’t delight in hearing, “All actions are empty, at peace, and unobtainable. End craving, become free of desire, and <em>nirvāṇa</em>.’ Isn’t there a self who says, ‘Knowing and seeing in this way is called seeing the Dharma.’”’</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b29'>「我爾時作是念：『是中誰復有力堪能為我說法，令我知法、見法？』我時復作是念：『尊者阿難今在拘睒彌國瞿師羅園，曾供養親覲世尊，佛所讚歎，諸梵行者皆悉知識。彼必堪能為我說法，令我知法、見法。』</td>
@@ -63,7 +63,7 @@ next: SA1_46.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.66c18'>時，尊者阿難語闡陀言：「善哉！闡陀！我意大喜，我慶仁者能於梵行人前，無所覆藏，破虛偽刺。闡陀！愚癡凡夫所不能解色無常，受、想、行、識無常，一切諸行無常，一切法無我，涅槃寂滅。汝今堪受勝妙法，汝今諦聽，當為汝說。」</td>
-    <td id='p13'>13. Venerable Ānanda then said to Chandaka, “Good, Chandaka! I would be happy to do that. Congratulations, sir, for being able to come before someone of the religious life without hiding anything and destroying the thorn of pretense. Chandaka, foolish, ordinary people aren’t able to understand that form is impermanent … that feeling … conception … volition … awareness is impermanent. All actions are impermanent. All things are selfless. Nirvāṇa is peaceful cessation.”</td>
+    <td id='p13'>13. Venerable Ānanda then said to Chandaka, “Good, Chandaka! I would be happy to do that. Congratulations, sir, for being able to come before someone of the religious life without hiding anything and destroying the thorn of pretense. Chandaka, foolish, ordinary people aren’t able to understand that form is impermanent … that feeling … conception … volition … awareness is impermanent. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.66c23'>時，闡陀作是念：「我今歡喜得勝妙心、得踊悅心，我今堪能受勝妙法。」</td>
